1.8/README.md
### 1.8, 18_
- Started: `2022-09-03T12:08:11.221Z`
- Username: `18_`

| Packet Normalized | Packet Name | Time |
|---|---|---|
| Compress | compress | 493.0ms
| Success | success | 496.0ms
| CustomPayload | custom_payload | 675.0ms
| CustomPayload | custom_payload | 677.0ms
| Login | login | 680.0ms
| CustomPayload | custom_payload | 682.0ms
| Difficulty | difficulty | 684.0ms
| Abilities | abilities | 687.0ms
| HeldItemSlot | held_item_slot | 688.0ms
| EntityStatus | entity_status | 690.0ms
| Position | position | 693.0ms
| Chat | chat | 1135.0ms
| PlayerInfo | player_info | 1139.0ms
| PlayerInfo | player_info | 1142.0ms
| PlayerInfo | player_info | 1144.0ms
| PlayerInfo | player_info | 1146.0ms
| PlayerInfo | player_info | 1149.0ms
| PlayerInfo | player_info | 1151.0ms
| PlayerInfo | player_info | 1155.0ms
| PlayerInfo | player_info | 1158.0ms
| PlayerInfo | player_info | 1161.0ms
| PlayerInfo | player_info | 1163.0ms
| PlayerInfo | player_info | 1166.0ms
| PlayerInfo | player_info | 1168.0ms
| NamedEntitySpawn | named_entity_spawn | 1173.0ms
| EntityMetadata | entity_metadata | 1176.0ms
| UpdateAttributes | update_attributes | 1179.0ms
| NamedEntitySpawn | named_entity_spawn | 1182.0ms
| EntityMetadata | entity_metadata | 1185.0ms
| UpdateAttributes | update_attributes | 1187.0ms
| SpawnEntityLiving | spawn_entity_living | 1190.0ms
| EntityMetadata | entity_metadata | 1193.0ms
| UpdateAttributes | update_attributes | 1195.0ms
| NamedEntitySpawn | named_entity_spawn | 1197.0ms
| EntityMetadata | entity_metadata | 1200.0ms
| UpdateAttributes | update_attributes | 1202.0ms
| NamedEntitySpawn | named_entity_spawn | 1205.0ms
| EntityMetadata | entity_metadata | 1207.0ms
| UpdateAttributes | update_attributes | 1210.0ms
| NamedEntitySpawn | named_entity_spawn | 1213.0ms
| EntityMetadata | entity_metadata | 1215.0ms
| UpdateAttributes | update_attributes | 1218.0ms
| NamedEntitySpawn | named_entity_spawn | 1221.0ms
| EntityMetadata | entity_metadata | 1223.0ms
| UpdateAttributes | update_attributes | 1226.0ms
| NamedEntitySpawn | named_entity_spawn | 1228.0ms
| EntityMetadata | entity_metadata | 1230.0ms
| UpdateAttributes | update_attributes | 1232.0ms
| NamedEntitySpawn | named_entity_spawn | 1235.0ms
| EntityMetadata | entity_metadata | 1237.0ms
| UpdateAttributes | update_attributes | 1240.0ms
| NamedEntitySpawn | named_entity_spawn | 1243.0ms
| EntityMetadata | entity_metadata | 1245.0ms
| UpdateAttributes | update_attributes | 1248.0ms
| SpawnEntity | spawn_entity | 1252.0ms
| EntityMetadata | entity_metadata | 1255.0ms
| NamedEntitySpawn | named_entity_spawn | 1259.0ms
| EntityMetadata | entity_metadata | 1261.0ms
| UpdateAttributes | update_attributes | 1263.0ms
| EntityMetadata | entity_metadata | 1266.0ms
| WorldBorder | world_border | 1269.0ms
| SpawnPosition | spawn_position | 1272.0ms
| WindowItems | window_items | 1276.0ms
| SetSlot | set_slot | 1278.0ms
| Transaction | transaction | 1280.0ms
| UpdateHealth | update_health | 1283.0ms
| Experience | experience | 1285.0ms
| UpdateAttributes | update_attributes | 3870.0ms
| NamedSoundEffect | named_sound_effect | 3874.0ms
| EntityTeleport | entity_teleport | 3878.0ms
| NamedSoundEffect | named_sound_effect | 3881.0ms
| NamedSoundEffect | named_sound_effect | 4606.0ms
| EntityTeleport | entity_teleport | 4742.0ms
| NamedSoundEffect | named_sound_effect | 4744.0ms
| TileEntityData | tile_entity_data | 4762.0ms
| TileEntityData | tile_entity_data | 4765.0ms
| TileEntityData | tile_entity_data | 4769.0ms
| TileEntityData | tile_entity_data | 4773.0ms
| NamedSoundEffect | named_sound_effect | 4776.0ms
| NamedSoundEffect | named_sound_effect | 4827.0ms
| NamedSoundEffect | named_sound_effect | 4830.0ms
| NamedSoundEffect | named_sound_effect | 4865.0ms
| NamedSoundEffect | named_sound_effect | 4948.0ms
| NamedSoundEffect | named_sound_effect | 4950.0ms
| NamedSoundEffect | named_sound_effect | 4952.0ms
| NamedSoundEffect | named_sound_effect | 4954.0ms
| EntityTeleport | entity_teleport | 4961.0ms
| EntityTeleport | entity_teleport | 4995.0ms
| NamedSoundEffect | named_sound_effect | 5002.0ms
| NamedSoundEffect | named_sound_effect | 5004.0ms
| NamedSoundEffect | named_sound_effect | 5009.0ms
| NamedSoundEffect | named_sound_effect | 5031.0ms
| NamedSoundEffect | named_sound_effect | 6000.0ms
| NamedSoundEffect | named_sound_effect | 6002.0ms
| NamedSoundEffect | named_sound_effect | 9161.0ms
| NamedSoundEffect | named_sound_effect | 9208.0ms
| NamedSoundEffect | named_sound_effect | 9210.0ms
| EntityTeleport | entity_teleport | 9224.0ms
| NamedSoundEffect | named_sound_effect | 9227.0ms
| NamedSoundEffect | named_sound_effect | 9244.0ms
| NamedSoundEffect | named_sound_effect | 9261.0ms
| NamedSoundEffect | named_sound_effect | 9264.0ms
| NamedSoundEffect | named_sound_effect | 9313.0ms
| NamedSoundEffect | named_sound_effect | 9562.0ms
| NamedSoundEffect | named_sound_effect | 10038.0ms
| NamedSoundEffect | named_sound_effect | 10040.0ms
| NamedSoundEffect | named_sound_effect | 10042.0ms
| EntityTeleport | entity_teleport | 10045.0ms
| NamedSoundEffect | named_sound_effect | 10047.0ms
| NamedSoundEffect | named_sound_effect | 10050.0ms
| NamedSoundEffect | named_sound_effect | 10053.0ms
| EntityTeleport | entity_teleport | 10055.0ms
| NamedSoundEffect | named_sound_effect | 10058.0ms
| EntityTeleport | entity_teleport | 10060.0ms
| NamedSoundEffect | named_sound_effect | 10063.0ms
| NamedSoundEffect | named_sound_effect | 10065.0ms
| NamedSoundEffect | named_sound_effect | 10068.0ms
| NamedSoundEffect | named_sound_effect | 10070.0ms
| EntityTeleport | entity_teleport | 10073.0ms
| NamedSoundEffect | named_sound_effect | 10075.0ms
| NamedSoundEffect | named_sound_effect | 10080.0ms
| EntityTeleport | entity_teleport | 10083.0ms
| NamedSoundEffect | named_sound_effect | 10085.0ms
| NamedSoundEffect | named_sound_effect | 10087.0ms
| NamedSoundEffect | named_sound_effect | 10089.0ms
| NamedSoundEffect | named_sound_effect | 10094.0ms
| NamedSoundEffect | named_sound_effect | 10096.0ms
| NamedSoundEffect | named_sound_effect | 10099.0ms
| NamedSoundEffect | named_sound_effect | 10101.0ms
| NamedSoundEffect | named_sound_effect | 10104.0ms
| NamedSoundEffect | named_sound_effect | 10107.0ms
| NamedSoundEffect | named_sound_effect | 10112.0ms
| NamedSoundEffect | named_sound_effect | 10114.0ms
| NamedSoundEffect | named_sound_effect | 10116.0ms
| NamedSoundEffect | named_sound_effect | 10119.0ms
| NamedSoundEffect | named_sound_effect | 10121.0ms
| NamedSoundEffect | named_sound_effect | 10123.0ms
| NamedSoundEffect | named_sound_effect | 10128.0ms
| EntityTeleport | entity_teleport | 10131.0ms
| NamedSoundEffect | named_sound_effect | 10134.0ms
| EntityLook | entity_look | 10137.0ms
| NamedSoundEffect | named_sound_effect | 10139.0ms
| NamedSoundEffect | named_sound_effect | 10141.0ms
| NamedSoundEffect | named_sound_effect | 10144.0ms
| NamedSoundEffect | named_sound_effect | 10149.0ms
| NamedSoundEffect | named_sound_effect | 10152.0ms
| NamedSoundEffect | named_sound_effect | 10154.0ms
| NamedSoundEffect | named_sound_effect | 10157.0ms
| NamedSoundEffect | named_sound_effect | 10160.0ms
| EntityTeleport | entity_teleport | 10163.0ms
| NamedSoundEffect | named_sound_effect | 10165.0ms
| NamedSoundEffect | named_sound_effect | 10170.0ms
| NamedSoundEffect | named_sound_effect | 10173.0ms
| NamedSoundEffect | named_sound_effect | 10175.0ms
| NamedSoundEffect | named_sound_effect | 10178.0ms
| NamedSoundEffect | named_sound_effect | 10180.0ms
| NamedSoundEffect | named_sound_effect | 10185.0ms
| NamedSoundEffect | named_sound_effect | 10189.0ms
| NamedSoundEffect | named_sound_effect | 10192.0ms
| EntityTeleport | entity_teleport | 10194.0ms
| NamedSoundEffect | named_sound_effect | 10197.0ms
| NamedSoundEffect | named_sound_effect | 10200.0ms
| NamedSoundEffect | named_sound_effect | 10205.0ms
| NamedSoundEffect | named_sound_effect | 10208.0ms
| NamedSoundEffect | named_sound_effect | 10211.0ms
| NamedSoundEffect | named_sound_effect | 10213.0ms
| EntityTeleport | entity_teleport | 10216.0ms
| NamedSoundEffect | named_sound_effect | 10219.0ms
| EntityTeleport | entity_teleport | 10222.0ms
| NamedSoundEffect | named_sound_effect | 10224.0ms
| NamedSoundEffect | named_sound_effect | 10228.0ms
| NamedSoundEffect | named_sound_effect | 10230.0ms
| NamedSoundEffect | named_sound_effect | 10232.0ms
| NamedSoundEffect | named_sound_effect | 10235.0ms
| NamedSoundEffect | named_sound_effect | 10240.0ms
| NamedSoundEffect | named_sound_effect | 10242.0ms
| EntityTeleport | entity_teleport | 10246.0ms
| NamedSoundEffect | named_sound_effect | 10248.0ms
| EntityTeleport | entity_teleport | 10251.0ms
| NamedSoundEffect | named_sound_effect | 10253.0ms
| NamedSoundEffect | named_sound_effect | 10258.0ms
| NamedSoundEffect | named_sound_effect | 10261.0ms
| NamedSoundEffect | named_sound_effect | 10264.0ms
| NamedSoundEffect | named_sound_effect | 10266.0ms
| NamedSoundEffect | named_sound_effect | 10269.0ms
| NamedSoundEffect | named_sound_effect | 10272.0ms
| NamedSoundEffect | named_sound_effect | 10277.0ms
| NamedSoundEffect | named_sound_effect | 10279.0ms
| NamedSoundEffect | named_sound_effect | 10282.0ms
| EntityTeleport | entity_teleport | 10284.0ms
| NamedSoundEffect | named_sound_effect | 10287.0ms
| NamedSoundEffect | named_sound_effect | 10290.0ms
| NamedSoundEffect | named_sound_effect | 10294.0ms
| NamedSoundEffect | named_sound_effect | 10297.0ms
| NamedSoundEffect | named_sound_effect | 10300.0ms
| EntityTeleport | entity_teleport | 10302.0ms
| NamedSoundEffect | named_sound_effect | 10305.0ms
| NamedSoundEffect | named_sound_effect | 10307.0ms
| NamedSoundEffect | named_sound_effect | 10312.0ms
| NamedSoundEffect | named_sound_effect | 10315.0ms
| NamedSoundEffect | named_sound_effect | 10317.0ms
| EntityTeleport | entity_teleport | 10320.0ms
| NamedSoundEffect | named_sound_effect | 10322.0ms
| NamedSoundEffect | named_sound_effect | 10325.0ms
| NamedSoundEffect | named_sound_effect | 10330.0ms
| NamedSoundEffect | named_sound_effect | 10332.0ms
| EntityTeleport | entity_teleport | 10335.0ms
| NamedSoundEffect | named_sound_effect | 10337.0ms
| NamedSoundEffect | named_sound_effect | 10340.0ms
| NamedSoundEffect | named_sound_effect | 10342.0ms
| EntityTeleport | entity_teleport | 10345.0ms
| NamedSoundEffect | named_sound_effect | 10347.0ms
| NamedSoundEffect | named_sound_effect | 10350.0ms
| NamedSoundEffect | named_sound_effect | 10353.0ms
| PlayerInfo | player_info | 10357.0ms
| EntityTeleport | entity_teleport | 10360.0ms
| NamedSoundEffect | named_sound_effect | 10362.0ms
| NamedSoundEffect | named_sound_effect | 10366.0ms
| NamedSoundEffect | named_sound_effect | 10369.0ms
| EntityTeleport | entity_teleport | 10371.0ms
| NamedSoundEffect | named_sound_effect | 10374.0ms
| NamedSoundEffect | named_sound_effect | 10377.0ms
| EntityLook | entity_look | 10379.0ms
| NamedSoundEffect | named_sound_effect | 10382.0ms
| NamedSoundEffect | named_sound_effect | 10385.0ms
| NamedSoundEffect | named_sound_effect | 10387.0ms
| NamedSoundEffect | named_sound_effect | 10389.0ms
| NamedSoundEffect | named_sound_effect | 10392.0ms
| NamedSoundEffect | named_sound_effect | 10397.0ms
| NamedSoundEffect | named_sound_effect | 10400.0ms
| NamedSoundEffect | named_sound_effect | 10403.0ms
| EntityTeleport | entity_teleport | 10406.0ms
| NamedSoundEffect | named_sound_effect | 10408.0ms
| NamedSoundEffect | named_sound_effect | 10411.0ms
| NamedSoundEffect | named_sound_effect | 10415.0ms
| PlayerInfo | player_info | 10417.0ms
| NamedSoundEffect | named_sound_effect | 10420.0ms
| Chat | chat | 11048.0ms
| PlayerInfo | player_info | 11050.0ms
| NamedEntitySpawn | named_entity_spawn | 11053.0ms
| EntityMetadata | entity_metadata | 11057.0ms
| UpdateAttributes | update_attributes | 11059.0ms
| EntityTeleport | entity_teleport | 11061.0ms
| UpdateAttributes | update_attributes | 11064.0ms
| NamedSoundEffect | named_sound_effect | 11066.0ms
| NamedSoundEffect | named_sound_effect | 11070.0ms
| NamedSoundEffect | named_sound_effect | 11072.0ms
| NamedSoundEffect | named_sound_effect | 11075.0ms
| EntityTeleport | entity_teleport | 11077.0ms
| NamedSoundEffect | named_sound_effect | 11080.0ms
| NamedSoundEffect | named_sound_effect | 11085.0ms
| NamedSoundEffect | named_sound_effect | 11088.0ms
| NamedSoundEffect | named_sound_effect | 11090.0ms
| NamedSoundEffect | named_sound_effect | 11093.0ms
| NamedSoundEffect | named_sound_effect | 11095.0ms
| EntityTeleport | entity_teleport | 11097.0ms
| NamedSoundEffect | named_sound_effect | 11099.0ms
| NamedSoundEffect | named_sound_effect | 11104.0ms
| NamedSoundEffect | named_sound_effect | 11107.0ms
| NamedSoundEffect | named_sound_effect | 11109.0ms
| NamedSoundEffect | named_sound_effect | 11112.0ms
| NamedSoundEffect | named_sound_effect | 11115.0ms
| NamedSoundEffect | named_sound_effect | 11119.0ms
| EntityTeleport | entity_teleport | 11122.0ms
| NamedSoundEffect | named_sound_effect | 11125.0ms
| NamedSoundEffect | named_sound_effect | 11127.0ms
| NamedSoundEffect | named_sound_effect | 11130.0ms
| NamedSoundEffect | named_sound_effect | 11134.0ms
| NamedSoundEffect | named_sound_effect | 11138.0ms
| EntityTeleport | entity_teleport | 11141.0ms
| NamedSoundEffect | named_sound_effect | 11144.0ms
| NamedSoundEffect | named_sound_effect | 11147.0ms
| NamedSoundEffect | named_sound_effect | 11149.0ms
| NamedSoundEffect | named_sound_effect | 11152.0ms
| EntityTeleport | entity_teleport | 11154.0ms
| NamedSoundEffect | named_sound_effect | 11159.0ms
| NamedSoundEffect | named_sound_effect | 11161.0ms
| NamedSoundEffect | named_sound_effect | 11165.0ms
| NamedSoundEffect | named_sound_effect | 11168.0ms
| NamedSoundEffect | named_sound_effect | 11171.0ms
| NamedSoundEffect | named_sound_effect | 11176.0ms
| EntityTeleport | entity_teleport | 11179.0ms
| NamedSoundEffect | named_sound_effect | 11182.0ms
| EntityTeleport | entity_teleport | 11185.0ms
| NamedSoundEffect | named_sound_effect | 11188.0ms
| NamedSoundEffect | named_sound_effect | 11190.0ms
| NamedSoundEffect | named_sound_effect | 11196.0ms
| NamedSoundEffect | named_sound_effect | 11199.0ms
| NamedSoundEffect | named_sound_effect | 11201.0ms
| NamedSoundEffect | named_sound_effect | 11204.0ms
| NamedSoundEffect | named_sound_effect | 11207.0ms
| NamedSoundEffect | named_sound_effect | 11211.0ms
| NamedSoundEffect | named_sound_effect | 11216.0ms
| NamedSoundEffect | named_sound_effect | 11221.0ms
| EntityTeleport | entity_teleport | 11224.0ms
| NamedSoundEffect | named_sound_effect | 11228.0ms
| NamedSoundEffect | named_sound_effect | 11231.0ms
| NamedSoundEffect | named_sound_effect | 11235.0ms
| NamedSoundEffect | named_sound_effect | 11239.0ms
| NamedSoundEffect | named_sound_effect | 11243.0ms
| NamedSoundEffect | named_sound_effect | 11247.0ms
| NamedSoundEffect | named_sound_effect | 11251.0ms
| NamedSoundEffect | named_sound_effect | 11254.0ms
| NamedSoundEffect | named_sound_effect | 11257.0ms
| NamedSoundEffect | named_sound_effect | 11262.0ms
| EntityTeleport | entity_teleport | 11265.0ms
| NamedSoundEffect | named_sound_effect | 11268.0ms
| NamedSoundEffect | named_sound_effect | 11271.0ms
| NamedSoundEffect | named_sound_effect | 11273.0ms
| NamedSoundEffect | named_sound_effect | 11277.0ms
| EntityTeleport | entity_teleport | 11280.0ms
| NamedSoundEffect | named_sound_effect | 11284.0ms
| NamedSoundEffect | named_sound_effect | 11287.0ms
| EntityTeleport | entity_teleport | 11291.0ms
| NamedSoundEffect | named_sound_effect | 11294.0ms
| NamedSoundEffect | named_sound_effect | 11297.0ms
| NamedSoundEffect | named_sound_effect | 11302.0ms
| NamedSoundEffect | named_sound_effect | 11305.0ms
| EntityTeleport | entity_teleport | 11309.0ms
| NamedSoundEffect | named_sound_effect | 11312.0ms
| NamedSoundEffect | named_sound_effect | 11315.0ms
| NamedSoundEffect | named_sound_effect | 11318.0ms
| NamedSoundEffect | named_sound_effect | 11323.0ms
| NamedSoundEffect | named_sound_effect | 11325.0ms
| NamedSoundEffect | named_sound_effect | 11328.0ms
| NamedSoundEffect | named_sound_effect | 11331.0ms
| NamedSoundEffect | named_sound_effect | 11333.0ms
| NamedSoundEffect | named_sound_effect | 11336.0ms
| NamedSoundEffect | named_sound_effect | 11340.0ms
| NamedSoundEffect | named_sound_effect | 11342.0ms
| NamedSoundEffect | named_sound_effect | 11345.0ms
| NamedSoundEffect | named_sound_effect | 11348.0ms
| EntityTeleport | entity_teleport | 11350.0ms
| NamedSoundEffect | named_sound_effect | 11353.0ms
| NamedSoundEffect | named_sound_effect | 11357.0ms
| NamedSoundEffect | named_sound_effect | 11360.0ms
| NamedSoundEffect | named_sound_effect | 11362.0ms
| NamedSoundEffect | named_sound_effect | 11365.0ms
| EntityTeleport | entity_teleport | 11367.0ms
| NamedSoundEffect | named_sound_effect | 11370.0ms
| NamedSoundEffect | named_sound_effect | 11375.0ms
| NamedSoundEffect | named_sound_effect | 11377.0ms
| NamedSoundEffect | named_sound_effect | 11379.0ms
| NamedSoundEffect | named_sound_effect | 11382.0ms
| NamedSoundEffect | named_sound_effect | 11385.0ms
| NamedSoundEffect | named_sound_effect | 11387.0ms
| NamedSoundEffect | named_sound_effect | 11391.0ms
| EntityTeleport | entity_teleport | 11394.0ms
| NamedSoundEffect | named_sound_effect | 11396.0ms
| NamedSoundEffect | named_sound_effect | 11398.0ms
| NamedSoundEffect | named_sound_effect | 11401.0ms
| NamedSoundEffect | named_sound_effect | 11404.0ms
| NamedSoundEffect | named_sound_effect | 11408.0ms
| NamedSoundEffect | named_sound_effect | 11411.0ms
| NamedSoundEffect | named_sound_effect | 11413.0ms
| NamedSoundEffect | named_sound_effect | 11416.0ms
| EntityTeleport | entity_teleport | 11418.0ms
| NamedSoundEffect | named_sound_effect | 11421.0ms
| NamedSoundEffect | named_sound_effect | 11425.0ms
| NamedSoundEffect | named_sound_effect | 11428.0ms
| NamedSoundEffect | named_sound_effect | 11431.0ms
| EntityTeleport | entity_teleport | 11433.0ms
| NamedSoundEffect | named_sound_effect | 11436.0ms
| NamedSoundEffect | named_sound_effect | 11438.0ms
| NamedSoundEffect | named_sound_effect | 11443.0ms
| NamedSoundEffect | named_sound_effect | 11445.0ms
| EntityTeleport | entity_teleport | 11448.0ms
| NamedSoundEffect | named_sound_effect | 11450.0ms
| NamedSoundEffect | named_sound_effect | 11452.0ms
| EntityTeleport | entity_teleport | 11455.0ms
| NamedSoundEffect | named_sound_effect | 11457.0ms
| NamedSoundEffect | named_sound_effect | 11462.0ms
| NamedSoundEffect | named_sound_effect | 11464.0ms
| EntityTeleport | entity_teleport | 11467.0ms
| NamedSoundEffect | named_sound_effect | 11469.0ms
| NamedSoundEffect | named_sound_effect | 11471.0ms
| NamedSoundEffect | named_sound_effect | 11476.0ms
| EntityTeleport | entity_teleport | 11478.0ms
| NamedSoundEffect | named_sound_effect | 11481.0ms
| NamedSoundEffect | named_sound_effect | 11501.0ms
| NamedSoundEffect | named_sound_effect | 11503.0ms
| NamedSoundEffect | named_sound_effect | 11506.0ms
| NamedSoundEffect | named_sound_effect | 11511.0ms
| NamedSoundEffect | named_sound_effect | 11513.0ms
| EntityTeleport | entity_teleport | 11516.0ms
| NamedSoundEffect | named_sound_effect | 11518.0ms
| EntityTeleport | entity_teleport | 11523.0ms
| NamedSoundEffect | named_sound_effect | 11526.0ms
| NamedSoundEffect | named_sound_effect | 11530.0ms
| NamedSoundEffect | named_sound_effect | 11533.0ms
| NamedSoundEffect | named_sound_effect | 11535.0ms
| NamedSoundEffect | named_sound_effect | 11538.0ms
| NamedSoundEffect | named_sound_effect | 11541.0ms
| NamedSoundEffect | named_sound_effect | 11544.0ms
| NamedSoundEffect | named_sound_effect | 11548.0ms
| NamedSoundEffect | named_sound_effect | 11551.0ms
| NamedSoundEffect | named_sound_effect | 11554.0ms
| NamedSoundEffect | named_sound_effect | 11557.0ms
| EntityTeleport | entity_teleport | 11559.0ms
| NamedSoundEffect | named_sound_effect | 11562.0ms
| NamedSoundEffect | named_sound_effect | 11567.0ms
| EntityTeleport | entity_teleport | 11570.0ms
| NamedSoundEffect | named_sound_effect | 11572.0ms
| NamedSoundEffect | named_sound_effect | 12311.0ms
| NamedSoundEffect | named_sound_effect | 12314.0ms
| EntityTeleport | entity_teleport | 12318.0ms
| EntityTeleport | entity_teleport | 12321.0ms
| NamedSoundEffect | named_sound_effect | 12324.0ms
| NamedSoundEffect | named_sound_effect | 12327.0ms
| NamedSoundEffect | named_sound_effect | 12332.0ms
| NamedSoundEffect | named_sound_effect | 12335.0ms
| NamedSoundEffect | named_sound_effect | 12338.0ms
| NamedSoundEffect | named_sound_effect | 12340.0ms
| NamedSoundEffect | named_sound_effect | 12343.0ms
| NamedSoundEffect | named_sound_effect | 12346.0ms
| EntityTeleport | entity_teleport | 12349.0ms
| NamedSoundEffect | named_sound_effect | 12352.0ms
| NamedSoundEffect | named_sound_effect | 12356.0ms
| NamedSoundEffect | named_sound_effect | 12359.0ms
| NamedSoundEffect | named_sound_effect | 12363.0ms
| NamedSoundEffect | named_sound_effect | 12370.0ms
| NamedSoundEffect | named_sound_effect | 12373.0ms
| NamedSoundEffect | named_sound_effect | 12376.0ms
| NamedSoundEffect | named_sound_effect | 12380.0ms
| NamedSoundEffect | named_sound_effect | 12383.0ms
| NamedSoundEffect | named_sound_effect | 12386.0ms
| NamedSoundEffect | named_sound_effect | 12396.0ms
| NamedSoundEffect | named_sound_effect | 12401.0ms
| EntityTeleport | entity_teleport | 12404.0ms
| NamedSoundEffect | named_sound_effect | 12407.0ms
| NamedSoundEffect | named_sound_effect | 12409.0ms
| NamedSoundEffect | named_sound_effect | 12412.0ms
| NamedSoundEffect | named_sound_effect | 12415.0ms
| NamedSoundEffect | named_sound_effect | 12420.0ms
| EntityTeleport | entity_teleport | 12422.0ms
| NamedSoundEffect | named_sound_effect | 12425.0ms
| NamedSoundEffect | named_sound_effect | 12428.0ms
| EntityLook | entity_look | 12431.0ms
| NamedSoundEffect | named_sound_effect | 12433.0ms
| NamedSoundEffect | named_sound_effect | 12438.0ms
| NamedSoundEffect | named_sound_effect | 12440.0ms
| NamedSoundEffect | named_sound_effect | 12443.0ms
| NamedSoundEffect | named_sound_effect | 12446.0ms
| EntityTeleport | entity_teleport | 12449.0ms
| NamedSoundEffect | named_sound_effect | 12452.0ms
| NamedSoundEffect | named_sound_effect | 12457.0ms
| NamedSoundEffect | named_sound_effect | 12459.0ms
| NamedSoundEffect | named_sound_effect | 12462.0ms
| NamedSoundEffect | named_sound_effect | 12465.0ms
| NamedSoundEffect | named_sound_effect | 12468.0ms
| NamedSoundEffect | named_sound_effect | 12471.0ms
| NamedSoundEffect | named_sound_effect | 12475.0ms
| NamedSoundEffect | named_sound_effect | 12478.0ms
| EntityTeleport | entity_teleport | 13255.0ms
| NamedSoundEffect | named_sound_effect | 13258.0ms
| NamedSoundEffect | named_sound_effect | 13260.0ms
| NamedSoundEffect | named_sound_effect | 13263.0ms
| NamedSoundEffect | named_sound_effect | 13265.0ms
| EntityTeleport | entity_teleport | 13268.0ms
| NamedSoundEffect | named_sound_effect | 13271.0ms
| NamedSoundEffect | named_sound_effect | 13274.0ms
| EntityTeleport | entity_teleport | 13277.0ms
| NamedSoundEffect | named_sound_effect | 13279.0ms
| NamedSoundEffect | named_sound_effect | 13282.0ms
| NamedSoundEffect | named_sound_effect | 13287.0ms
| NamedSoundEffect | named_sound_effect | 13289.0ms
| NamedSoundEffect | named_sound_effect | 13292.0ms
| NamedSoundEffect | named_sound_effect | 13294.0ms
| NamedSoundEffect | named_sound_effect | 13297.0ms
| EntityTeleport | entity_teleport | 13300.0ms
| NamedSoundEffect | named_sound_effect | 13302.0ms
| NamedSoundEffect | named_sound_effect | 13307.0ms
| EntityTeleport | entity_teleport | 13309.0ms
| NamedSoundEffect | named_sound_effect | 13312.0ms
| NamedSoundEffect | named_sound_effect | 13314.0ms
| NamedSoundEffect | named_sound_effect | 13317.0ms
| NamedSoundEffect | named_sound_effect | 13322.0ms
| NamedSoundEffect | named_sound_effect | 13325.0ms
| NamedSoundEffect | named_sound_effect | 13327.0ms
| NamedSoundEffect | named_sound_effect | 13330.0ms
| NamedSoundEffect | named_sound_effect | 13335.0ms
| NamedSoundEffect | named_sound_effect | 13337.0ms
| NamedSoundEffect | named_sound_effect | 13342.0ms
| EntityTeleport | entity_teleport | 13915.0ms
| NamedSoundEffect | named_sound_effect | 13917.0ms
| NamedSoundEffect | named_sound_effect | 13920.0ms
| NamedSoundEffect | named_sound_effect | 13922.0ms
| NamedSoundEffect | named_sound_effect | 13925.0ms
| NamedSoundEffect | named_sound_effect | 13930.0ms
| NamedSoundEffect | named_sound_effect | 13932.0ms
| NamedSoundEffect | named_sound_effect | 13934.0ms
| NamedSoundEffect | named_sound_effect | 13937.0ms
| NamedSoundEffect | named_sound_effect | 13939.0ms
| NamedSoundEffect | named_sound_effect | 13941.0ms
| EntityTeleport | entity_teleport | 13943.0ms
| NamedSoundEffect | named_sound_effect | 13946.0ms
| EntityTeleport | entity_teleport | 13949.0ms
| NamedSoundEffect | named_sound_effect | 13951.0ms
| NamedSoundEffect | named_sound_effect | 13953.0ms
| NamedSoundEffect | named_sound_effect | 13955.0ms
| NamedSoundEffect | named_sound_effect | 13960.0ms
| NamedSoundEffect | named_sound_effect | 13963.0ms
| EntityTeleport | entity_teleport | 14420.0ms
| NamedSoundEffect | named_sound_effect | 14423.0ms
| NamedSoundEffect | named_sound_effect | 14425.0ms
| NamedSoundEffect | named_sound_effect | 14428.0ms
| NamedSoundEffect | named_sound_effect | 14431.0ms
| NamedSoundEffect | named_sound_effect | 14436.0ms
| Difficulty | difficulty | 14439.0ms
| EntityTeleport | entity_teleport | 14442.0ms
| NamedSoundEffect | named_sound_effect | 14445.0ms
| SpawnEntityLiving | spawn_entity_living | 14448.0ms
| EntityMetadata | entity_metadata | 14451.0ms
| UpdateAttributes | update_attributes | 14454.0ms
| EntityTeleport | entity_teleport | 14457.0ms
| UpdateAttributes | update_attributes | 14460.0ms
| NamedSoundEffect | named_sound_effect | 14463.0ms
| NamedSoundEffect | named_sound_effect | 14465.0ms
| MultiBlockChange | multi_block_change | 14470.0ms
| EntityTeleport | entity_teleport | 14473.0ms
| NamedSoundEffect | named_sound_effect | 14475.0ms
| NamedSoundEffect | named_sound_effect | 14480.0ms
| NamedSoundEffect | named_sound_effect | 14483.0ms
| NamedSoundEffect | named_sound_effect | 14486.0ms
| NamedSoundEffect | named_sound_effect | 14488.0ms
| NamedSoundEffect | named_sound_effect | 14490.0ms
| NamedSoundEffect | named_sound_effect | 14495.0ms
| NamedSoundEffect | named_sound_effect | 15206.0ms
| WorldParticles | world_particles | 15210.0ms
| WorldParticles | world_particles | 15212.0ms
| WorldParticles | world_particles | 15214.0ms
| WorldParticles | world_particles | 15217.0ms
| WorldParticles | world_particles | 15221.0ms
| WorldParticles | world_particles | 15224.0ms
| WorldParticles | world_particles | 15226.0ms
| WorldParticles | world_particles | 15228.0ms
| WorldParticles | world_particles | 15231.0ms
| WorldParticles | world_particles | 15233.0ms
| WorldParticles | world_particles | 15238.0ms
| WorldParticles | world_particles | 15240.0ms
| NamedSoundEffect | named_sound_effect | 15243.0ms
| NamedSoundEffect | named_sound_effect | 15245.0ms
| EntityLook | entity_look | 15247.0ms
| EntityTeleport | entity_teleport | 15249.0ms
| NamedSoundEffect | named_sound_effect | 15252.0ms
| NamedSoundEffect | named_sound_effect | 15256.0ms
| EntityTeleport | entity_teleport | 15258.0ms
| NamedSoundEffect | named_sound_effect | 15260.0ms
| NamedSoundEffect | named_sound_effect | 15263.0ms
| NamedSoundEffect | named_sound_effect | 15265.0ms
| NamedSoundEffect | named_sound_effect | 15269.0ms
| NamedSoundEffect | named_sound_effect | 15272.0ms
| NamedSoundEffect | named_sound_effect | 15275.0ms
| NamedSoundEffect | named_sound_effect | 15277.0ms
| NamedSoundEffect | named_sound_effect | 15279.0ms
| EntityTeleport | entity_teleport | 15282.0ms
| NamedSoundEffect | named_sound_effect | 15284.0ms
| NamedSoundEffect | named_sound_effect | 15288.0ms
| EntityTeleport | entity_teleport | 15291.0ms
| NamedSoundEffect | named_sound_effect | 15293.0ms
| NamedSoundEffect | named_sound_effect | 15296.0ms
| NamedSoundEffect | named_sound_effect | 16122.0ms
| NamedSoundEffect | named_sound_effect | 16126.0ms
| NamedSoundEffect | named_sound_effect | 16128.0ms
| NamedSoundEffect | named_sound_effect | 16131.0ms
| NamedSoundEffect | named_sound_effect | 16133.0ms
| NamedSoundEffect | named_sound_effect | 16136.0ms
| NamedSoundEffect | named_sound_effect | 16138.0ms
| EntityTeleport | entity_teleport | 16140.0ms
| EntityTeleport | entity_teleport | 16145.0ms
| KeepAlive | keep_alive | 16147.0ms
| NamedSoundEffect | named_sound_effect | 16152.0ms
| NamedSoundEffect | named_sound_effect | 16155.0ms
| NamedSoundEffect | named_sound_effect | 16157.0ms
| NamedSoundEffect | named_sound_effect | 16159.0ms
| NamedSoundEffect | named_sound_effect | 16164.0ms
| NamedSoundEffect | named_sound_effect | 16166.0ms
| EntityTeleport | entity_teleport | 16169.0ms
| NamedSoundEffect | named_sound_effect | 16172.0ms
| NamedSoundEffect | named_sound_effect | 16174.0ms
| Chat | chat | 16176.0ms
| EntityTeleport | entity_teleport | 16178.0ms
| NamedSoundEffect | named_sound_effect | 16181.0ms
| NamedSoundEffect | named_sound_effect | 16184.0ms
| NamedSoundEffect | named_sound_effect | 16186.0ms
| NamedSoundEffect | named_sound_effect | 16188.0ms
| NamedSoundEffect | named_sound_effect | 16191.0ms
| NamedSoundEffect | named_sound_effect | 16196.0ms
| Title | title | 16199.0ms
| NamedSoundEffect | named_sound_effect | 16201.0ms
| EntityTeleport | entity_teleport | 16204.0ms
| EntityTeleport | entity_teleport | 16206.0ms
| NamedSoundEffect | named_sound_effect | 16209.0ms
| GameStateChange | game_state_change | 16211.0ms
| NamedSoundEffect | named_sound_effect | 16214.0ms
| GameStateChange | game_state_change | 16216.0ms
| NamedSoundEffect | named_sound_effect | 16218.0ms
| GameStateChange | game_state_change | 16221.0ms
| NamedSoundEffect | named_sound_effect | 16223.0ms
| NamedSoundEffect | named_sound_effect | 16226.0ms
| NamedSoundEffect | named_sound_effect | 16228.0ms
| NamedSoundEffect | named_sound_effect | 16232.0ms
| PlayerInfo | player_info | 16236.0ms
| PlayerInfo | player_info | 16238.0ms
| PlayerInfo | player_info | 16241.0ms
| PlayerInfo | player_info | 16244.0ms
| PlayerInfo | player_info | 17975.0ms
| PlayerInfo | player_info | 17977.0ms
| PlayerInfo | player_info | 17981.0ms
| PlayerInfo | player_info | 17983.0ms
| PlayerInfo | player_info | 17986.0ms
| Abilities | abilities | 17988.0ms
| PlayerInfo | player_info | 17990.0ms
| GameStateChange | game_state_change | 17992.0ms
| Abilities | abilities | 17993.0ms
| Chat | chat | 17995.0ms
| PlayerInfo | player_info | 17997.0ms
| GameStateChange | game_state_change | 17998.0ms
| Experience | experience | 18001.0ms
| GameStateChange | game_state_change | 18003.0ms
| NamedSoundEffect | named_sound_effect | 18005.0ms
| NamedSoundEffect | named_sound_effect | 18010.0ms
| NamedSoundEffect | named_sound_effect | 18012.0ms
| GameStateChange | game_state_change | 18015.0ms
| GameStateChange | game_state_change | 18017.0ms
| EntityTeleport | entity_teleport | 18019.0ms
| NamedSoundEffect | named_sound_effect | 18021.0ms
| GameStateChange | game_state_change | 18023.0ms
| NamedSoundEffect | named_sound_effect | 18026.0ms
| GameStateChange | game_state_change | 18028.0ms
| NamedSoundEffect | named_sound_effect | 18030.0ms
| GameStateChange | game_state_change | 18032.0ms
| NamedSoundEffect | named_sound_effect | 18034.0ms
| GameStateChange | game_state_change | 18036.0ms
| NamedSoundEffect | named_sound_effect | 18039.0ms
| NamedSoundEffect | named_sound_effect | 18042.0ms
| NamedSoundEffect | named_sound_effect | 18044.0ms
| GameStateChange | game_state_change | 18046.0ms
| NamedSoundEffect | named_sound_effect | 18049.0ms
| NamedSoundEffect | named_sound_effect | 18053.0ms
| GameStateChange | game_state_change | 18055.0ms
| GameStateChange | game_state_change | 18058.0ms
| NamedSoundEffect | named_sound_effect | 18060.0ms
| NamedSoundEffect | named_sound_effect | 18062.0ms
| GameStateChange | game_state_change | 18064.0ms
| EntityTeleport | entity_teleport | 18066.0ms
| GameStateChange | game_state_change | 18069.0ms
| NamedSoundEffect | named_sound_effect | 18071.0ms
| GameStateChange | game_state_change | 18074.0ms
| NamedSoundEffect | named_sound_effect | 18076.0ms
| GameStateChange | game_state_change | 18078.0ms
| EntityTeleport | entity_teleport | 18080.0ms
| NamedSoundEffect | named_sound_effect | 18082.0ms
| NamedSoundEffect | named_sound_effect | 18085.0ms
| GameStateChange | game_state_change | 18087.0ms
| NamedSoundEffect | named_sound_effect | 18089.0ms
| NamedSoundEffect | named_sound_effect | 18092.0ms
| NamedSoundEffect | named_sound_effect | 18094.0ms
| NamedSoundEffect | named_sound_effect | 18098.0ms
| GameStateChange | game_state_change | 18100.0ms
| GameStateChange | game_state_change | 18102.0ms
| EntityTeleport | entity_teleport | 18104.0ms
| NamedSoundEffect | named_sound_effect | 18107.0ms
| GameStateChange | game_state_change | 18108.0ms
| GameStateChange | game_state_change | 18113.0ms
| GameStateChange | game_state_change | 18116.0ms
| EntityTeleport | entity_teleport | 18118.0ms
| NamedSoundEffect | named_sound_effect | 18120.0ms
| GameStateChange | game_state_change | 18122.0ms
| EntityTeleport | entity_teleport | 18125.0ms
| NamedSoundEffect | named_sound_effect | 18127.0ms
| NamedSoundEffect | named_sound_effect | 18131.0ms
| NamedSoundEffect | named_sound_effect | 18133.0ms
| GameStateChange | game_state_change | 18135.0ms
| NamedSoundEffect | named_sound_effect | 18137.0ms
| GameStateChange | game_state_change | 18139.0ms
| GameStateChange | game_state_change | 18144.0ms
| NamedSoundEffect | named_sound_effect | 18147.0ms
| NamedSoundEffect | named_sound_effect | 18149.0ms
| GameStateChange | game_state_change | 18151.0ms
| NamedSoundEffect | named_sound_effect | 18153.0ms
| NamedSoundEffect | named_sound_effect | 18155.0ms
| NamedSoundEffect | named_sound_effect | 18160.0ms
| GameStateChange | game_state_change | 18162.0ms
| NamedSoundEffect | named_sound_effect | 18165.0ms
| GameStateChange | game_state_change | 18166.0ms
| NamedSoundEffect | named_sound_effect | 18169.0ms
| GameStateChange | game_state_change | 18171.0ms
| NamedSoundEffect | named_sound_effect | 18173.0ms
| NamedSoundEffect | named_sound_effect | 18177.0ms
| GameStateChange | game_state_change | 18179.0ms
| GameStateChange | game_state_change | 18182.0ms
| EntityTeleport | entity_teleport | 18184.0ms
| NamedSoundEffect | named_sound_effect | 18186.0ms
| GameStateChange | game_state_change | 18188.0ms
| NamedSoundEffect | named_sound_effect | 18191.0ms
| GameStateChange | game_state_change | 18193.0ms
| GameStateChange | game_state_change | 18196.0ms
| EntityTeleport | entity_teleport | 18198.0ms
| NamedSoundEffect | named_sound_effect | 18200.0ms
| NamedSoundEffect | named_sound_effect | 18205.0ms
| NamedSoundEffect | named_sound_effect | 18207.0ms
| GameStateChange | game_state_change | 18209.0ms
| NamedSoundEffect | named_sound_effect | 18213.0ms
| NamedSoundEffect | named_sound_effect | 18215.0ms
| GameStateChange | game_state_change | 18217.0ms
| NamedSoundEffect | named_sound_effect | 18219.0ms
| NamedSoundEffect | named_sound_effect | 18224.0ms
| GameStateChange | game_state_change | 18226.0ms
| EntityLook | entity_look | 18228.0ms
| NamedSoundEffect | named_sound_effect | 18230.0ms
| GameStateChange | game_state_change | 18232.0ms
| NamedSoundEffect | named_sound_effect | 18235.0ms
| GameStateChange | game_state_change | 18237.0ms
| GameStateChange | game_state_change | 19705.0ms
| EntityTeleport | entity_teleport | 19708.0ms
| NamedSoundEffect | named_sound_effect | 19710.0ms
| GameStateChange | game_state_change | 19713.0ms
| NamedSoundEffect | named_sound_effect | 19716.0ms
| GameStateChange | game_state_change | 19718.0ms
| NamedSoundEffect | named_sound_effect | 19721.0ms
| NamedSoundEffect | named_sound_effect | 19724.0ms
| NamedSoundEffect | named_sound_effect | 19726.0ms
| Chat | chat | 19788.0ms
| Chat | chat | 19830.0ms
| Chat | chat | 19876.0ms
| Chat | chat | 19918.0ms
| Chat | chat | 19957.0ms
| Chat | chat | 19997.0ms
| Chat | chat | 20035.0ms
| Chat | chat | 20132.0ms
| Chat | chat | 20246.0ms
| Chat | chat | 20303.0ms
| Chat | chat | 20351.0ms
| Chat | chat | 21316.0ms
| GameStateChange | game_state_change | 21319.0ms
| NamedSoundEffect | named_sound_effect | 21321.0ms
| NamedSoundEffect | named_sound_effect | 21324.0ms
| Experience | experience | 21326.0ms
| GameStateChange | game_state_change | 21328.0ms
| NamedSoundEffect | named_sound_effect | 21331.0ms
| GameStateChange | game_state_change | 21333.0ms
| NamedSoundEffect | named_sound_effect | 21336.0ms
| GameStateChange | game_state_change | 21338.0ms
| EntityTeleport | entity_teleport | 21341.0ms
| NamedSoundEffect | named_sound_effect | 21343.0ms
| GameStateChange | game_state_change | 21346.0ms
| GameStateChange | game_state_change | 21349.0ms
| NamedSoundEffect | named_sound_effect | 21351.0ms
| NamedSoundEffect | named_sound_effect | 21354.0ms
| GameStateChange | game_state_change | 21355.0ms
| GameStateChange | game_state_change | 21360.0ms
| EntityTeleport | entity_teleport | 21362.0ms
| NamedSoundEffect | named_sound_effect | 21365.0ms
| NamedSoundEffect | named_sound_effect | 21367.0ms
| NamedSoundEffect | named_sound_effect | 21369.0ms
| GameStateChange | game_state_change | 21371.0ms
| NamedSoundEffect | named_sound_effect | 21374.0ms
| NamedSoundEffect | named_sound_effect | 21376.0ms
| NamedSoundEffect | named_sound_effect | 21379.0ms
| GameStateChange | game_state_change | 21381.0ms
| EntityTeleport | entity_teleport | 21383.0ms
| NamedSoundEffect | named_sound_effect | 21385.0ms
| GameStateChange | game_state_change | 21387.0ms
| GameStateChange | game_state_change | 21390.0ms
| GameStateChange | game_state_change | 21393.0ms
| NamedSoundEffect | named_sound_effect | 21396.0ms
| NamedSoundEffect | named_sound_effect | 21398.0ms
| NamedSoundEffect | named_sound_effect | 21403.0ms
| GameStateChange | game_state_change | 21406.0ms
| GameStateChange | game_state_change | 21411.0ms
| EntityTeleport | entity_teleport | 21414.0ms
| NamedSoundEffect | named_sound_effect | 21417.0ms
| NamedSoundEffect | named_sound_effect | 21420.0ms
| GameStateChange | game_state_change | 21423.0ms
| EntityTeleport | entity_teleport | 21427.0ms
| GameStateChange | game_state_change | 21430.0ms
| NamedSoundEffect | named_sound_effect | 21432.0ms
| NamedSoundEffect | named_sound_effect | 21446.0ms
| NamedSoundEffect | named_sound_effect | 21449.0ms
| NamedSoundEffect | named_sound_effect | 21452.0ms
| GameStateChange | game_state_change | 21454.0ms
| NamedSoundEffect | named_sound_effect | 21464.0ms
| GameStateChange | game_state_change | 21467.0ms
| NamedSoundEffect | named_sound_effect | 21470.0ms
| GameStateChange | game_state_change | 21472.0ms
| NamedSoundEffect | named_sound_effect | 21475.0ms
| GameStateChange | game_state_change | 21477.0ms
| EntityTeleport | entity_teleport | 21480.0ms
| NamedSoundEffect | named_sound_effect | 21483.0ms
| NamedSoundEffect | named_sound_effect | 21485.0ms
| GameStateChange | game_state_change | 21488.0ms
| NamedSoundEffect | named_sound_effect | 21491.0ms
| GameStateChange | game_state_change | 21493.0ms
| EntityTeleport | entity_teleport | 21495.0ms
| GameStateChange | game_state_change | 21498.0ms
| GameStateChange | game_state_change | 21501.0ms
| NamedSoundEffect | named_sound_effect | 21504.0ms
| NamedSoundEffect | named_sound_effect | 21506.0ms
| GameStateChange | game_state_change | 21508.0ms
| NamedSoundEffect | named_sound_effect | 21511.0ms
| NamedSoundEffect | named_sound_effect | 21514.0ms
| NamedSoundEffect | named_sound_effect | 21516.0ms
| NamedSoundEffect | named_sound_effect | 21519.0ms
| GameStateChange | game_state_change | 21521.0ms
| NamedSoundEffect | named_sound_effect | 21524.0ms
| GameStateChange | game_state_change | 21527.0ms
| NamedSoundEffect | named_sound_effect | 21530.0ms
| GameStateChange | game_state_change | 21532.0ms
| NamedSoundEffect | named_sound_effect | 21535.0ms
| GameStateChange | game_state_change | 21537.0ms
| GameStateChange | game_state_change | 21541.0ms
| EntityTeleport | entity_teleport | 21545.0ms
| NamedSoundEffect | named_sound_effect | 21547.0ms
| GameStateChange | game_state_change | 21549.0ms
| NamedSoundEffect | named_sound_effect | 21552.0ms
| NamedSoundEffect | named_sound_effect | 21555.0ms
| NamedSoundEffect | named_sound_effect | 21559.0ms
| GameStateChange | game_state_change | 21562.0ms
| NamedSoundEffect | named_sound_effect | 21584.0ms
| GameStateChange | game_state_change | 21587.0ms
| EntityTeleport | entity_teleport | 21590.0ms
| NamedSoundEffect | named_sound_effect | 21593.0ms
| NamedSoundEffect | named_sound_effect | 21596.0ms
| GameStateChange | game_state_change | 21599.0ms
| NamedSoundEffect | named_sound_effect | 21602.0ms
| GameStateChange | game_state_change | 21605.0ms
| EntityTeleport | entity_teleport | 21608.0ms
| NamedSoundEffect | named_sound_effect | 21611.0ms
| GameStateChange | game_state_change | 21614.0ms
| NamedSoundEffect | named_sound_effect | 21617.0ms
| NamedSoundEffect | named_sound_effect | 21619.0ms
| GameStateChange | game_state_change | 21621.0ms
| EntityTeleport | entity_teleport | 21623.0ms
| GameStateChange | game_state_change | 21625.0ms
| EntityTeleport | entity_teleport | 21628.0ms
| NamedSoundEffect | named_sound_effect | 21630.0ms
| NamedSoundEffect | named_sound_effect | 21633.0ms
| GameStateChange | game_state_change | 21635.0ms
| EntityTeleport | entity_teleport | 21637.0ms
| GameStateChange | game_state_change | 21639.0ms
| NamedSoundEffect | named_sound_effect | 21641.0ms
| NamedSoundEffect | named_sound_effect | 21645.0ms
| GameStateChange | game_state_change | 21647.0ms
| NamedSoundEffect | named_sound_effect | 21649.0ms
| GameStateChange | game_state_change | 21651.0ms
| NamedSoundEffect | named_sound_effect | 21653.0ms
| NamedSoundEffect | named_sound_effect | 21658.0ms
| NamedSoundEffect | named_sound_effect | 21660.0ms
| NamedSoundEffect | named_sound_effect | 21662.0ms
| GameStateChange | game_state_change | 21664.0ms
| GameStateChange | game_state_change | 21666.0ms
| NamedSoundEffect | named_sound_effect | 21668.0ms
| GameStateChange | game_state_change | 22123.0ms
| NamedSoundEffect | named_sound_effect | 22125.0ms
| GameStateChange | game_state_change | 22127.0ms
| GameStateChange | game_state_change | 22130.0ms
| NamedSoundEffect | named_sound_effect | 22132.0ms
| NamedSoundEffect | named_sound_effect | 22134.0ms
| GameStateChange | game_state_change | 22136.0ms
| EntityLook | entity_look | 22138.0ms
| EntityTeleport | entity_teleport | 22140.0ms
| NamedSoundEffect | named_sound_effect | 22142.0ms
| NamedSoundEffect | named_sound_effect | 22144.0ms
| GameStateChange | game_state_change | 22146.0ms
| NamedSoundEffect | named_sound_effect | 22149.0ms
| NamedSoundEffect | named_sound_effect | 22153.0ms
| GameStateChange | game_state_change | 22155.0ms
| NamedSoundEffect | named_sound_effect | 22158.0ms
| NamedSoundEffect | named_sound_effect | 22160.0ms
| GameStateChange | game_state_change | 22162.0ms
| EntityTeleport | entity_teleport | 22164.0ms
| NamedSoundEffect | named_sound_effect | 22166.0ms
| GameStateChange | game_state_change | 22168.0ms
| GameStateChange | game_state_change | 22172.0ms
| NamedSoundEffect | named_sound_effect | 22174.0ms
| GameStateChange | game_state_change | 22176.0ms
| NamedSoundEffect | named_sound_effect | 22178.0ms
| NamedSoundEffect | named_sound_effect | 22183.0ms
| GameStateChange | game_state_change | 22185.0ms
| NamedSoundEffect | named_sound_effect | 22187.0ms
| GameStateChange | game_state_change | 22189.0ms
| NamedSoundEffect | named_sound_effect | 22192.0ms
| EntityTeleport | entity_teleport | 22194.0ms
| NamedSoundEffect | named_sound_effect | 22196.0ms
| NamedSoundEffect | named_sound_effect | 22200.0ms
| NamedSoundEffect | named_sound_effect | 22202.0ms
| NamedSoundEffect | named_sound_effect | 22205.0ms
| NamedSoundEffect | named_sound_effect | 22207.0ms
| NamedSoundEffect | named_sound_effect | 22209.0ms
| NamedSoundEffect | named_sound_effect | 22214.0ms
| NamedSoundEffect | named_sound_effect | 22216.0ms
| EntityTeleport | entity_teleport | 22219.0ms
| NamedSoundEffect | named_sound_effect | 22221.0ms
| NamedSoundEffect | named_sound_effect | 22223.0ms
| NamedSoundEffect | named_sound_effect | 22226.0ms
| NamedSoundEffect | named_sound_effect | 22230.0ms
| NamedSoundEffect | named_sound_effect | 22233.0ms
| NamedSoundEffect | named_sound_effect | 22235.0ms
| EntityTeleport | entity_teleport | 22237.0ms
| NamedSoundEffect | named_sound_effect | 22239.0ms
| NamedSoundEffect | named_sound_effect | 22241.0ms
| NamedSoundEffect | named_sound_effect | 22246.0ms
| EntityTeleport | entity_teleport | 22248.0ms
| NamedSoundEffect | named_sound_effect | 22250.0ms
| NamedSoundEffect | named_sound_effect | 22252.0ms
| NamedSoundEffect | named_sound_effect | 22255.0ms
| EntityTeleport | entity_teleport | 22257.0ms
| NamedSoundEffect | named_sound_effect | 22259.0ms
| NamedSoundEffect | named_sound_effect | 22264.0ms
| NamedSoundEffect | named_sound_effect | 22266.0ms
| EntityTeleport | entity_teleport | 22268.0ms
| NamedSoundEffect | named_sound_effect | 22271.0ms
| NamedSoundEffect | named_sound_effect | 22273.0ms
| EntityTeleport | entity_teleport | 22275.0ms
| NamedSoundEffect | named_sound_effect | 22277.0ms
| NamedSoundEffect | named_sound_effect | 22280.0ms
| NamedSoundEffect | named_sound_effect | 22282.0ms
| NamedSoundEffect | named_sound_effect | 22285.0ms
| NamedSoundEffect | named_sound_effect | 22287.0ms
| NamedSoundEffect | named_sound_effect | 26832.0ms
| NamedSoundEffect | named_sound_effect | 26835.0ms
| EntityTeleport | entity_teleport | 26838.0ms
| NamedSoundEffect | named_sound_effect | 26840.0ms
| NamedSoundEffect | named_sound_effect | 26843.0ms
| NamedSoundEffect | named_sound_effect | 26847.0ms
| NamedSoundEffect | named_sound_effect | 26851.0ms
| NamedSoundEffect | named_sound_effect | 26853.0ms
| NamedSoundEffect | named_sound_effect | 26856.0ms
| NamedSoundEffect | named_sound_effect | 26859.0ms
| NamedSoundEffect | named_sound_effect | 26862.0ms
| NamedSoundEffect | named_sound_effect | 26866.0ms
| NamedSoundEffect | named_sound_effect | 26870.0ms
| NamedSoundEffect | named_sound_effect | 26872.0ms
| NamedSoundEffect | named_sound_effect | 26876.0ms
| EntityTeleport | entity_teleport | 26879.0ms
| NamedSoundEffect | named_sound_effect | 26882.0ms
| NamedSoundEffect | named_sound_effect | 26885.0ms
| NamedSoundEffect | named_sound_effect | 26889.0ms
| NamedSoundEffect | named_sound_effect | 26892.0ms
| NamedSoundEffect | named_sound_effect | 26895.0ms
| EntityTeleport | entity_teleport | 26898.0ms
| NamedSoundEffect | named_sound_effect | 26901.0ms
| NamedSoundEffect | named_sound_effect | 26904.0ms
| EntityTeleport | entity_teleport | 26906.0ms
| NamedSoundEffect | named_sound_effect | 26910.0ms
| NamedSoundEffect | named_sound_effect | 26913.0ms
| NamedSoundEffect | named_sound_effect | 26915.0ms
| NamedSoundEffect | named_sound_effect | 26919.0ms
| NamedSoundEffect | named_sound_effect | 26922.0ms
| EntityTeleport | entity_teleport | 26924.0ms
| EntityTeleport | entity_teleport | 26928.0ms
| NamedSoundEffect | named_sound_effect | 26931.0ms
| NamedSoundEffect | named_sound_effect | 26934.0ms
| NamedSoundEffect | named_sound_effect | 26936.0ms
| NamedSoundEffect | named_sound_effect | 26939.0ms
| NamedSoundEffect | named_sound_effect | 26944.0ms
| NamedSoundEffect | named_sound_effect | 26946.0ms
| NamedSoundEffect | named_sound_effect | 26949.0ms
| NamedSoundEffect | named_sound_effect | 26952.0ms
| NamedSoundEffect | named_sound_effect | 26954.0ms
| NamedSoundEffect | named_sound_effect | 26958.0ms
| NamedSoundEffect | named_sound_effect | 26962.0ms
| NamedSoundEffect | named_sound_effect | 26965.0ms
| NamedSoundEffect | named_sound_effect | 26968.0ms
| NamedSoundEffect | named_sound_effect | 26971.0ms
| NamedSoundEffect | named_sound_effect | 26973.0ms
| EntityTeleport | entity_teleport | 26976.0ms
| NamedSoundEffect | named_sound_effect | 26979.0ms
| NamedSoundEffect | named_sound_effect | 26983.0ms
| NamedSoundEffect | named_sound_effect | 26986.0ms
| EntityTeleport | entity_teleport | 26989.0ms
| NamedSoundEffect | named_sound_effect | 26992.0ms
| NamedSoundEffect | named_sound_effect | 26995.0ms
| NamedSoundEffect | named_sound_effect | 27000.0ms
| NamedSoundEffect | named_sound_effect | 27002.0ms
| NamedSoundEffect | named_sound_effect | 27005.0ms
| NamedSoundEffect | named_sound_effect | 27007.0ms
| NamedSoundEffect | named_sound_effect | 27010.0ms
| NamedSoundEffect | named_sound_effect | 27012.0ms
| EntityDestroy | entity_destroy | 27015.0ms
| PlayerInfo | player_info | 27019.0ms
| Chat | chat | 27140.0ms
| EntityDestroy | entity_destroy | 27143.0ms
| PlayerInfo | player_info | 27145.0ms
| Chat | chat | 27388.0ms
| EntityDestroy | entity_destroy | 27390.0ms
| PlayerInfo | player_info | 27393.0ms
| Chat | chat | 27578.0ms
| EntityDestroy | entity_destroy | 27579.0ms
| PlayerInfo | player_info | 27582.0ms
| Chat | chat | 27783.0ms
| EntityDestroy | entity_destroy | 27785.0ms
| PlayerInfo | player_info | 27787.0ms
| Chat | chat | 27988.0ms
| EntityDestroy | entity_destroy | 27990.0ms
| PlayerInfo | player_info | 27992.0ms
| Chat | chat | 28211.0ms
| EntityDestroy | entity_destroy | 28214.0ms
| PlayerInfo | player_info | 28215.0ms
| Chat | chat | 28436.0ms
| EntityDestroy | entity_destroy | 28438.0ms
| PlayerInfo | player_info | 28441.0ms
| Chat | chat | 28728.0ms
| EntityDestroy | entity_destroy | 28730.0ms
| PlayerInfo | player_info | 28733.0ms
| Chat | chat | 28975.0ms
| EntityDestroy | entity_destroy | 28977.0ms
| PlayerInfo | player_info | 28979.0ms
| Chat | chat | 29106.0ms
| CloseWindow | close_window | 29109.0ms
| EntityDestroy | entity_destroy | 29111.0ms
| EntityDestroy | entity_destroy | 29113.0ms
| EntityDestroy | entity_destroy | 29115.0ms
| EntityDestroy | entity_destroy | 29117.0ms
| Abilities | abilities | 29119.0ms
| UpdateAttributes | update_attributes | 29122.0ms
| Respawn | respawn | 29124.0ms
| Position | position | 29127.0ms
| SpawnPosition | spawn_position | 29129.0ms
| Difficulty | difficulty | 29131.0ms
| Experience | experience | 29133.0ms
| WorldBorder | world_border | 29136.0ms
| SpawnPosition | spawn_position | 29138.0ms
| EntityStatus | entity_status | 29139.0ms
| NamedEntitySpawn | named_entity_spawn | 29142.0ms
| EntityMetadata | entity_metadata | 29145.0ms
| UpdateAttributes | update_attributes | 29147.0ms
| NamedEntitySpawn | named_entity_spawn | 29150.0ms
| EntityMetadata | entity_metadata | 29153.0ms
| UpdateAttributes | update_attributes | 29155.0ms
| NamedEntitySpawn | named_entity_spawn | 29157.0ms
| EntityMetadata | entity_metadata | 29160.0ms
| UpdateAttributes | update_attributes | 29161.0ms
| NamedEntitySpawn | named_entity_spawn | 29165.0ms
| EntityMetadata | entity_metadata | 29168.0ms
| UpdateAttributes | update_attributes | 29170.0ms
| NamedEntitySpawn | named_entity_spawn | 29173.0ms
| EntityMetadata | entity_metadata | 29175.0ms
| UpdateAttributes | update_attributes | 29178.0ms
| NamedEntitySpawn | named_entity_spawn | 29180.0ms
| EntityMetadata | entity_metadata | 29183.0ms
| UpdateAttributes | update_attributes | 29186.0ms
| NamedEntitySpawn | named_entity_spawn | 29188.0ms
| EntityMetadata | entity_metadata | 29190.0ms
| UpdateAttributes | update_attributes | 29193.0ms
| NamedEntitySpawn | named_entity_spawn | 29195.0ms
| EntityMetadata | entity_metadata | 29198.0ms
| UpdateAttributes | update_attributes | 29201.0ms
| NamedEntitySpawn | named_entity_spawn | 29203.0ms
| EntityMetadata | entity_metadata | 29205.0ms
| UpdateAttributes | update_attributes | 29208.0ms
| NamedEntitySpawn | named_entity_spawn | 29210.0ms
| EntityMetadata | entity_metadata | 29213.0ms
| UpdateAttributes | update_attributes | 29216.0ms
| UpdateAttributes | update_attributes | 29220.0ms
| WindowItems | window_items | 29224.0ms
| SetSlot | set_slot | 29226.0ms
| Transaction | transaction | 29228.0ms
| UpdateAttributes | update_attributes | 29230.0ms
| UpdateHealth | update_health | 29233.0ms
| HeldItemSlot | held_item_slot | 29235.0ms
| EntityStatus | entity_status | 29236.0ms
| GameStateChange | game_state_change | 29238.0ms
| Abilities | abilities | 29240.0ms
| Chat | chat | 29362.0ms
| PlayerInfo | player_info | 29365.0ms
| NamedEntitySpawn | named_entity_spawn | 29367.0ms
| EntityMetadata | entity_metadata | 29370.0ms
| UpdateAttributes | update_attributes | 29372.0ms
| Chat | chat | 29433.0ms
| EntityTeleport | entity_teleport | 29435.0ms
| EntityTeleport | entity_teleport | 29437.0ms
| EntityTeleport | entity_teleport | 29439.0ms
| EntityTeleport | entity_teleport | 29444.0ms
| EntityTeleport | entity_teleport | 29446.0ms
| EntityTeleport | entity_teleport | 29449.0ms
| EntityTeleport | entity_teleport | 29451.0ms
| EntityTeleport | entity_teleport | 29453.0ms
| EntityTeleport | entity_teleport | 29455.0ms
| EntityTeleport | entity_teleport | 29460.0ms
| EntityTeleport | entity_teleport | 29462.0ms
| UpdateHealth | update_health | 29464.0ms
| Experience | experience | 29466.0ms
| TileEntityData | tile_entity_data | 29814.0ms
| TileEntityData | tile_entity_data | 29819.0ms
| TileEntityData | tile_entity_data | 29822.0ms
| TileEntityData | tile_entity_data | 29825.0ms
| TileEntityData | tile_entity_data | 29828.0ms
| TileEntityData | tile_entity_data | 29831.0ms
| TileEntityData | tile_entity_data | 29837.0ms
| EntityTeleport | entity_teleport | 29840.0ms
| EntityTeleport | entity_teleport | 29843.0ms
| EntityTeleport | entity_teleport | 29845.0ms
| EntityTeleport | entity_teleport | 29848.0ms
| EntityTeleport | entity_teleport | 29850.0ms
| EntityTeleport | entity_teleport | 29852.0ms
| EntityTeleport | entity_teleport | 29857.0ms
| EntityTeleport | entity_teleport | 29859.0ms
| EntityTeleport | entity_teleport | 29861.0ms
| EntityTeleport | entity_teleport | 29863.0ms
| EntityTeleport | entity_teleport | 29865.0ms
| TileEntityData | tile_entity_data | 30067.0ms
| TileEntityData | tile_entity_data | 30070.0ms
| TileEntityData | tile_entity_data | 30073.0ms
| TileEntityData | tile_entity_data | 30076.0ms
| TileEntityData | tile_entity_data | 30079.0ms
| TileEntityData | tile_entity_data | 30288.0ms
| TileEntityData | tile_entity_data | 30292.0ms
| TileEntityData | tile_entity_data | 30294.0ms
| TileEntityData | tile_entity_data | 30297.0ms
| TileEntityData | tile_entity_data | 30301.0ms
| EntityTeleport | entity_teleport | 30752.0ms
| TileEntityData | tile_entity_data | 31124.0ms
| TileEntityData | tile_entity_data | 31128.0ms
| TileEntityData | tile_entity_data | 31131.0ms
| EntityTeleport | entity_teleport | 35556.0ms
| EntityStatus | entity_status | 35565.0ms
| EntityTeleport | entity_teleport | 35567.0ms
| EntityMetadata | entity_metadata | 35569.0ms
| EntityTeleport | entity_teleport | 35582.0ms
| EntityTeleport | entity_teleport | 35596.0ms
| EntityTeleport | entity_teleport | 35708.0ms
| EntityTeleport | entity_teleport | 35717.0ms
| EntityMetadata | entity_metadata | 35719.0ms
| EntityStatus | entity_status | 35721.0ms
| KeepAlive | keep_alive | 35723.0ms
| EntityMetadata | entity_metadata | 35728.0ms
| EntityTeleport | entity_teleport | 35751.0ms
| EntityMetadata | entity_metadata | 35754.0ms
| EntityStatus | entity_status | 35756.0ms
| EntityMetadata | entity_metadata | 35758.0ms
| EntityMetadata | entity_metadata | 35761.0ms
| EntityStatus | entity_status | 35762.0ms
| EntityMetadata | entity_metadata | 35765.0ms
| EntityMetadata | entity_metadata | 35768.0ms
| EntityStatus | entity_status | 35771.0ms
| EntityMetadata | entity_metadata | 35773.0ms
| EntityTeleport | entity_teleport | 35775.0ms
| EntityTeleport | entity_teleport | 35780.0ms
| EntityTeleport | entity_teleport | 35782.0ms
| EntityTeleport | entity_teleport | 35784.0ms
| EntityTeleport | entity_teleport | 35787.0ms
| EntityTeleport | entity_teleport | 35789.0ms
| EntityTeleport | entity_teleport | 35791.0ms
| EntityTeleport | entity_teleport | 35796.0ms
| EntityTeleport | entity_teleport | 35798.0ms
| EntityTeleport | entity_teleport | 35800.0ms
| EntityTeleport | entity_teleport | 35802.0ms
| EntityMetadata | entity_metadata | 35805.0ms
| EntityStatus | entity_status | 35807.0ms
| EntityMetadata | entity_metadata | 35809.0ms
| EntityDestroy | entity_destroy | 35811.0ms
| PlayerInfo | player_info | 35813.0ms
| Chat | chat | 35815.0ms
| EntityDestroy | entity_destroy | 35818.0ms
| PlayerInfo | player_info | 35820.0ms
| Chat | chat | 35822.0ms
| EntityDestroy | entity_destroy | 35824.0ms
| PlayerInfo | player_info | 35826.0ms
| Chat | chat | 35828.0ms
| EntityDestroy | entity_destroy | 35830.0ms
| PlayerInfo | player_info | 35832.0ms
| Chat | chat | 35835.0ms
| EntityDestroy | entity_destroy | 35837.0ms
| PlayerInfo | player_info | 35839.0ms
| Chat | chat | 35840.0ms
| EntityDestroy | entity_destroy | 35843.0ms
| PlayerInfo | player_info | 35845.0ms
| Chat | chat | 35847.0ms
| EntityDestroy | entity_destroy | 35850.0ms
| PlayerInfo | player_info | 35852.0ms
| Chat | chat | 35853.0ms
| EntityDestroy | entity_destroy | 35855.0ms
| PlayerInfo | player_info | 35858.0ms
| Chat | chat | 35860.0ms
| EntityDestroy | entity_destroy | 35862.0ms
| PlayerInfo | player_info | 35865.0ms
| Chat | chat | 35867.0ms
| EntityDestroy | entity_destroy | 35868.0ms
| PlayerInfo | player_info | 35870.0ms
| Chat | chat | 35872.0ms
| KickDisconnect | kick_disconnect | 35875.0ms
