1.12/README.md
### 1.12, 112_
- Started: `2022-09-03T12:07:50.816Z`
- Username: `112_`

| Packet Normalized | Packet Name | Time |
|---|---|---|
| Compress | compress | 200.0ms
| Success | success | 205.0ms
| CustomPayload | custom_payload | 391.0ms
| CustomPayload | custom_payload | 394.0ms
| Login | login | 397.0ms
| CustomPayload | custom_payload | 399.0ms
| Difficulty | difficulty | 402.0ms
| Abilities | abilities | 405.0ms
| HeldItemSlot | held_item_slot | 408.0ms
| EntityStatus | entity_status | 411.0ms
| Position | position | 413.0ms
| Chat | chat | 440.0ms
| PlayerInfo | player_info | 444.0ms
| PlayerInfo | player_info | 447.0ms
| PlayerInfo | player_info | 450.0ms
| PlayerInfo | player_info | 453.0ms
| PlayerInfo | player_info | 456.0ms
| PlayerInfo | player_info | 458.0ms
| PlayerInfo | player_info | 463.0ms
| PlayerInfo | player_info | 467.0ms
| NamedEntitySpawn | named_entity_spawn | 471.0ms
| EntityMetadata | entity_metadata | 475.0ms
| EntityUpdateAttributes | entity_update_attributes | 478.0ms
| NamedEntitySpawn | named_entity_spawn | 481.0ms
| EntityMetadata | entity_metadata | 485.0ms
| EntityUpdateAttributes | entity_update_attributes | 487.0ms
| SpawnEntityLiving | spawn_entity_living | 491.0ms
| EntityMetadata | entity_metadata | 494.0ms
| EntityUpdateAttributes | entity_update_attributes | 496.0ms
| NamedEntitySpawn | named_entity_spawn | 500.0ms
| EntityMetadata | entity_metadata | 503.0ms
| EntityUpdateAttributes | entity_update_attributes | 506.0ms
| NamedEntitySpawn | named_entity_spawn | 508.0ms
| EntityMetadata | entity_metadata | 512.0ms
| EntityUpdateAttributes | entity_update_attributes | 515.0ms
| NamedEntitySpawn | named_entity_spawn | 518.0ms
| EntityMetadata | entity_metadata | 521.0ms
| EntityUpdateAttributes | entity_update_attributes | 524.0ms
| NamedEntitySpawn | named_entity_spawn | 527.0ms
| EntityMetadata | entity_metadata | 530.0ms
| EntityUpdateAttributes | entity_update_attributes | 533.0ms
| SpawnEntity | spawn_entity | 536.0ms
| EntityMetadata | entity_metadata | 540.0ms
| EntityMetadata | entity_metadata | 544.0ms
| WorldBorder | world_border | 549.0ms
| SpawnPosition | spawn_position | 552.0ms
| WindowItems | window_items | 557.0ms
| SetSlot | set_slot | 560.0ms
| Transaction | transaction | 562.0ms
| UpdateHealth | update_health | 565.0ms
| Experience | experience | 567.0ms
| EntityUpdateAttributes | entity_update_attributes | 779.0ms
| Advancements | advancements | 784.0ms
| NamedSoundEffect | named_sound_effect | 786.0ms
| NamedSoundEffect | named_sound_effect | 788.0ms
| NamedSoundEffect | named_sound_effect | 790.0ms
| NamedSoundEffect | named_sound_effect | 804.0ms
| NamedSoundEffect | named_sound_effect | 811.0ms
| NamedSoundEffect | named_sound_effect | 815.0ms
| NamedSoundEffect | named_sound_effect | 958.0ms
| NamedSoundEffect | named_sound_effect | 960.0ms
| NamedSoundEffect | named_sound_effect | 1019.0ms
| NamedSoundEffect | named_sound_effect | 1029.0ms
| NamedSoundEffect | named_sound_effect | 1032.0ms
| NamedSoundEffect | named_sound_effect | 1197.0ms
| NamedSoundEffect | named_sound_effect | 1313.0ms
| NamedSoundEffect | named_sound_effect | 1411.0ms
| NamedSoundEffect | named_sound_effect | 1552.0ms
| NamedSoundEffect | named_sound_effect | 1606.0ms
| NamedSoundEffect | named_sound_effect | 1650.0ms
| NamedSoundEffect | named_sound_effect | 1772.0ms
| NamedSoundEffect | named_sound_effect | 1847.0ms
| NamedSoundEffect | named_sound_effect | 1893.0ms
| NamedSoundEffect | named_sound_effect | 1916.0ms
| NamedSoundEffect | named_sound_effect | 1934.0ms
| NamedSoundEffect | named_sound_effect | 1950.0ms
| NamedSoundEffect | named_sound_effect | 2159.0ms
| NamedSoundEffect | named_sound_effect | 2249.0ms
| EntityTeleport | entity_teleport | 2308.0ms
| NamedSoundEffect | named_sound_effect | 2335.0ms
| NamedSoundEffect | named_sound_effect | 2436.0ms
| NamedSoundEffect | named_sound_effect | 2439.0ms
| NamedSoundEffect | named_sound_effect | 2443.0ms
| NamedSoundEffect | named_sound_effect | 2446.0ms
| NamedSoundEffect | named_sound_effect | 2684.0ms
| NamedSoundEffect | named_sound_effect | 2737.0ms
| NamedSoundEffect | named_sound_effect | 2739.0ms
| NamedSoundEffect | named_sound_effect | 2784.0ms
| NamedSoundEffect | named_sound_effect | 2880.0ms
| NamedSoundEffect | named_sound_effect | 2991.0ms
| NamedSoundEffect | named_sound_effect | 3043.0ms
| NamedSoundEffect | named_sound_effect | 3145.0ms
| NamedSoundEffect | named_sound_effect | 3267.0ms
| NamedSoundEffect | named_sound_effect | 3289.0ms
| NamedSoundEffect | named_sound_effect | 3292.0ms
| NamedSoundEffect | named_sound_effect | 3391.0ms
| NamedSoundEffect | named_sound_effect | 3593.0ms
| NamedSoundEffect | named_sound_effect | 3645.0ms
| NamedSoundEffect | named_sound_effect | 3735.0ms
| NamedSoundEffect | named_sound_effect | 3738.0ms
| NamedSoundEffect | named_sound_effect | 3862.0ms
| NamedSoundEffect | named_sound_effect | 3961.0ms
| NamedSoundEffect | named_sound_effect | 4004.0ms
| NamedSoundEffect | named_sound_effect | 4121.0ms
| NamedSoundEffect | named_sound_effect | 4196.0ms
| NamedSoundEffect | named_sound_effect | 4199.0ms
| NamedSoundEffect | named_sound_effect | 4241.0ms
| NamedSoundEffect | named_sound_effect | 4436.0ms
| NamedSoundEffect | named_sound_effect | 4483.0ms
| NamedSoundEffect | named_sound_effect | 4531.0ms
| NamedSoundEffect | named_sound_effect | 4648.0ms
| NamedSoundEffect | named_sound_effect | 4739.0ms
| NamedSoundEffect | named_sound_effect | 4793.0ms
| NamedSoundEffect | named_sound_effect | 4796.0ms
| EntityTeleport | entity_teleport | 4847.0ms
| NamedSoundEffect | named_sound_effect | 4849.0ms
| NamedSoundEffect | named_sound_effect | 5077.0ms
| NamedSoundEffect | named_sound_effect | 5079.0ms
| NamedSoundEffect | named_sound_effect | 5273.0ms
| NamedSoundEffect | named_sound_effect | 5278.0ms
| NamedSoundEffect | named_sound_effect | 5358.0ms
| PlayerInfo | player_info | 5568.0ms
| Chat | chat | 5711.0ms
| PlayerInfo | player_info | 5715.0ms
| NamedEntitySpawn | named_entity_spawn | 5718.0ms
| EntityMetadata | entity_metadata | 5721.0ms
| EntityUpdateAttributes | entity_update_attributes | 5723.0ms
| EntityTeleport | entity_teleport | 5757.0ms
| EntityUpdateAttributes | entity_update_attributes | 5760.0ms
| NamedSoundEffect | named_sound_effect | 5762.0ms
| EntityTeleport | entity_teleport | 5782.0ms
| NamedSoundEffect | named_sound_effect | 5785.0ms
| NamedSoundEffect | named_sound_effect | 5802.0ms
| NamedSoundEffect | named_sound_effect | 6147.0ms
| NamedSoundEffect | named_sound_effect | 6152.0ms
| NamedSoundEffect | named_sound_effect | 6157.0ms
| NamedSoundEffect | named_sound_effect | 6160.0ms
| NamedSoundEffect | named_sound_effect | 6163.0ms
| NamedSoundEffect | named_sound_effect | 6166.0ms
| NamedSoundEffect | named_sound_effect | 6168.0ms
| NamedSoundEffect | named_sound_effect | 6171.0ms
| NamedSoundEffect | named_sound_effect | 6176.0ms
| NamedSoundEffect | named_sound_effect | 6238.0ms
| NamedSoundEffect | named_sound_effect | 6289.0ms
| NamedSoundEffect | named_sound_effect | 6291.0ms
| NamedSoundEffect | named_sound_effect | 6299.0ms
| NamedSoundEffect | named_sound_effect | 6439.0ms
| NamedSoundEffect | named_sound_effect | 6455.0ms
| NamedSoundEffect | named_sound_effect | 6586.0ms
| NamedSoundEffect | named_sound_effect | 6647.0ms
| NamedSoundEffect | named_sound_effect | 6689.0ms
| NamedSoundEffect | named_sound_effect | 6742.0ms
| NamedSoundEffect | named_sound_effect | 6781.0ms
| NamedSoundEffect | named_sound_effect | 6881.0ms
| NamedSoundEffect | named_sound_effect | 6884.0ms
| NamedSoundEffect | named_sound_effect | 7167.0ms
| NamedSoundEffect | named_sound_effect | 7170.0ms
| NamedSoundEffect | named_sound_effect | 7192.0ms
| NamedSoundEffect | named_sound_effect | 7195.0ms
| NamedSoundEffect | named_sound_effect | 7224.0ms
| NamedSoundEffect | named_sound_effect | 7390.0ms
| NamedSoundEffect | named_sound_effect | 7392.0ms
| NamedSoundEffect | named_sound_effect | 7417.0ms
| NamedSoundEffect | named_sound_effect | 7684.0ms
| NamedSoundEffect | named_sound_effect | 7714.0ms
| NamedSoundEffect | named_sound_effect | 7717.0ms
| NamedSoundEffect | named_sound_effect | 7720.0ms
| EntityLook | entity_look | 7767.0ms
| NamedSoundEffect | named_sound_effect | 7769.0ms
| NamedSoundEffect | named_sound_effect | 7772.0ms
| NamedSoundEffect | named_sound_effect | 7895.0ms
| NamedSoundEffect | named_sound_effect | 8078.0ms
| NamedSoundEffect | named_sound_effect | 8081.0ms
| NamedSoundEffect | named_sound_effect | 8084.0ms
| NamedSoundEffect | named_sound_effect | 8144.0ms
| NamedSoundEffect | named_sound_effect | 8147.0ms
| NamedSoundEffect | named_sound_effect | 8405.0ms
| NamedSoundEffect | named_sound_effect | 8407.0ms
| NamedSoundEffect | named_sound_effect | 8409.0ms
| NamedSoundEffect | named_sound_effect | 8450.0ms
| NamedSoundEffect | named_sound_effect | 8479.0ms
| NamedSoundEffect | named_sound_effect | 8497.0ms
| NamedSoundEffect | named_sound_effect | 8712.0ms
| NamedSoundEffect | named_sound_effect | 8715.0ms
| NamedSoundEffect | named_sound_effect | 8785.0ms
| NamedSoundEffect | named_sound_effect | 8842.0ms
| NamedSoundEffect | named_sound_effect | 8890.0ms
| NamedSoundEffect | named_sound_effect | 8934.0ms
| NamedSoundEffect | named_sound_effect | 9029.0ms
| NamedSoundEffect | named_sound_effect | 9176.0ms
| NamedSoundEffect | named_sound_effect | 9218.0ms
| NamedSoundEffect | named_sound_effect | 9221.0ms
| NamedSoundEffect | named_sound_effect | 9347.0ms
| NamedSoundEffect | named_sound_effect | 9350.0ms
| NamedSoundEffect | named_sound_effect | 9377.0ms
| NamedSoundEffect | named_sound_effect | 9441.0ms
| NamedSoundEffect | named_sound_effect | 9539.0ms
| NamedSoundEffect | named_sound_effect | 9640.0ms
| NamedSoundEffect | named_sound_effect | 9762.0ms
| NamedSoundEffect | named_sound_effect | 9764.0ms
| NamedSoundEffect | named_sound_effect | 9767.0ms
| NamedSoundEffect | named_sound_effect | 9937.0ms
| NamedSoundEffect | named_sound_effect | 9992.0ms
| NamedSoundEffect | named_sound_effect | 10051.0ms
| NamedSoundEffect | named_sound_effect | 10054.0ms
| EntityTeleport | entity_teleport | 10086.0ms
| NamedSoundEffect | named_sound_effect | 10199.0ms
| NamedSoundEffect | named_sound_effect | 10202.0ms
| EntityLook | entity_look | 10337.0ms
| NamedSoundEffect | named_sound_effect | 10340.0ms
| NamedSoundEffect | named_sound_effect | 10343.0ms
| NamedSoundEffect | named_sound_effect | 10430.0ms
| PlayerInfo | player_info | 10683.0ms
| NamedSoundEffect | named_sound_effect | 10685.0ms
| Chat | chat | 10928.0ms
| PlayerInfo | player_info | 10931.0ms
| NamedEntitySpawn | named_entity_spawn | 10934.0ms
| EntityMetadata | entity_metadata | 10937.0ms
| EntityUpdateAttributes | entity_update_attributes | 10940.0ms
| EntityTeleport | entity_teleport | 10943.0ms
| EntityUpdateAttributes | entity_update_attributes | 10946.0ms
| NamedSoundEffect | named_sound_effect | 10949.0ms
| EntityTeleport | entity_teleport | 10952.0ms
| NamedSoundEffect | named_sound_effect | 11109.0ms
| NamedSoundEffect | named_sound_effect | 11111.0ms
| NamedSoundEffect | named_sound_effect | 11113.0ms
| NamedSoundEffect | named_sound_effect | 11118.0ms
| NamedSoundEffect | named_sound_effect | 11121.0ms
| NamedSoundEffect | named_sound_effect | 11123.0ms
| NamedSoundEffect | named_sound_effect | 11125.0ms
| NamedSoundEffect | named_sound_effect | 11128.0ms
| NamedSoundEffect | named_sound_effect | 11130.0ms
| NamedSoundEffect | named_sound_effect | 11135.0ms
| NamedSoundEffect | named_sound_effect | 11137.0ms
| NamedSoundEffect | named_sound_effect | 11291.0ms
| NamedSoundEffect | named_sound_effect | 11294.0ms
| NamedSoundEffect | named_sound_effect | 11298.0ms
| NamedSoundEffect | named_sound_effect | 11359.0ms
| NamedSoundEffect | named_sound_effect | 11417.0ms
| NamedSoundEffect | named_sound_effect | 11445.0ms
| NamedSoundEffect | named_sound_effect | 11448.0ms
| NamedSoundEffect | named_sound_effect | 11503.0ms
| NamedSoundEffect | named_sound_effect | 11588.0ms
| NamedSoundEffect | named_sound_effect | 11591.0ms
| NamedSoundEffect | named_sound_effect | 11651.0ms
| NamedSoundEffect | named_sound_effect | 11711.0ms
| NamedSoundEffect | named_sound_effect | 11937.0ms
| NamedSoundEffect | named_sound_effect | 11942.0ms
| NamedSoundEffect | named_sound_effect | 11945.0ms
| NamedSoundEffect | named_sound_effect | 11948.0ms
| NamedSoundEffect | named_sound_effect | 12034.0ms
| NamedSoundEffect | named_sound_effect | 12114.0ms
| NamedSoundEffect | named_sound_effect | 12117.0ms
| NamedSoundEffect | named_sound_effect | 12176.0ms
| NamedSoundEffect | named_sound_effect | 12180.0ms
| NamedSoundEffect | named_sound_effect | 12182.0ms
| NamedSoundEffect | named_sound_effect | 12243.0ms
| NamedSoundEffect | named_sound_effect | 12356.0ms
| NamedSoundEffect | named_sound_effect | 12435.0ms
| NamedSoundEffect | named_sound_effect | 12437.0ms
| NamedSoundEffect | named_sound_effect | 12511.0ms
| NamedSoundEffect | named_sound_effect | 12590.0ms
| NamedSoundEffect | named_sound_effect | 12593.0ms
| NamedSoundEffect | named_sound_effect | 12640.0ms
| NamedSoundEffect | named_sound_effect | 12642.0ms
| NamedSoundEffect | named_sound_effect | 12685.0ms
| NamedSoundEffect | named_sound_effect | 12859.0ms
| NamedSoundEffect | named_sound_effect | 12862.0ms
| NamedSoundEffect | named_sound_effect | 12940.0ms
| NamedSoundEffect | named_sound_effect | 12993.0ms
| NamedSoundEffect | named_sound_effect | 13070.0ms
| NamedSoundEffect | named_sound_effect | 13072.0ms
| NamedSoundEffect | named_sound_effect | 13076.0ms
| NamedSoundEffect | named_sound_effect | 13119.0ms
| NamedSoundEffect | named_sound_effect | 13176.0ms
| NamedSoundEffect | named_sound_effect | 13225.0ms
| NamedSoundEffect | named_sound_effect | 13283.0ms
| NamedSoundEffect | named_sound_effect | 13383.0ms
| NamedSoundEffect | named_sound_effect | 13427.0ms
| NamedSoundEffect | named_sound_effect | 13456.0ms
| NamedSoundEffect | named_sound_effect | 13490.0ms
| NamedSoundEffect | named_sound_effect | 13525.0ms
| NamedSoundEffect | named_sound_effect | 13596.0ms
| NamedSoundEffect | named_sound_effect | 13598.0ms
| NamedSoundEffect | named_sound_effect | 13782.0ms
| NamedSoundEffect | named_sound_effect | 13785.0ms
| NamedSoundEffect | named_sound_effect | 13788.0ms
| NamedSoundEffect | named_sound_effect | 13895.0ms
| NamedSoundEffect | named_sound_effect | 13900.0ms
| NamedSoundEffect | named_sound_effect | 13948.0ms
| NamedSoundEffect | named_sound_effect | 13978.0ms
| NamedSoundEffect | named_sound_effect | 14035.0ms
| NamedSoundEffect | named_sound_effect | 14075.0ms
| NamedSoundEffect | named_sound_effect | 14198.0ms
| NamedSoundEffect | named_sound_effect | 14255.0ms
| NamedSoundEffect | named_sound_effect | 14274.0ms
| NamedSoundEffect | named_sound_effect | 14329.0ms
| NamedSoundEffect | named_sound_effect | 14331.0ms
| NamedSoundEffect | named_sound_effect | 14336.0ms
| NamedSoundEffect | named_sound_effect | 14517.0ms
| NamedSoundEffect | named_sound_effect | 14578.0ms
| NamedSoundEffect | named_sound_effect | 14582.0ms
| NamedSoundEffect | named_sound_effect | 14634.0ms
| NamedSoundEffect | named_sound_effect | 14694.0ms
| NamedSoundEffect | named_sound_effect | 14696.0ms
| NamedSoundEffect | named_sound_effect | 14729.0ms
| NamedSoundEffect | named_sound_effect | 14786.0ms
| NamedSoundEffect | named_sound_effect | 14827.0ms
| NamedSoundEffect | named_sound_effect | 14998.0ms
| NamedSoundEffect | named_sound_effect | 15047.0ms
| NamedSoundEffect | named_sound_effect | 15116.0ms
| NamedSoundEffect | named_sound_effect | 15150.0ms
| NamedSoundEffect | named_sound_effect | 15153.0ms
| NamedSoundEffect | named_sound_effect | 15156.0ms
| NamedSoundEffect | named_sound_effect | 15224.0ms
| NamedSoundEffect | named_sound_effect | 15226.0ms
| KeepAlive | keep_alive | 15426.0ms
| EntityTeleport | entity_teleport | 15432.0ms
| NamedSoundEffect | named_sound_effect | 15435.0ms
| NamedSoundEffect | named_sound_effect | 15552.0ms
| NamedSoundEffect | named_sound_effect | 15554.0ms
| EntityLook | entity_look | 15556.0ms
| NamedSoundEffect | named_sound_effect | 15559.0ms
| NamedSoundEffect | named_sound_effect | 15655.0ms
| NamedSoundEffect | named_sound_effect | 15658.0ms
| PlayerInfo | player_info | 15661.0ms
| NamedSoundEffect | named_sound_effect | 15952.0ms
| NamedSoundEffect | named_sound_effect | 15955.0ms
| Chat | chat | 16343.0ms
| PlayerInfo | player_info | 16346.0ms
| NamedEntitySpawn | named_entity_spawn | 16349.0ms
| EntityMetadata | entity_metadata | 16352.0ms
| EntityUpdateAttributes | entity_update_attributes | 16355.0ms
| EntityTeleport | entity_teleport | 16358.0ms
| EntityUpdateAttributes | entity_update_attributes | 16361.0ms
| NamedSoundEffect | named_sound_effect | 16363.0ms
| EntityTeleport | entity_teleport | 16366.0ms
| NamedSoundEffect | named_sound_effect | 16369.0ms
| NamedSoundEffect | named_sound_effect | 16373.0ms
| NamedSoundEffect | named_sound_effect | 16375.0ms
| NamedSoundEffect | named_sound_effect | 16378.0ms
| NamedSoundEffect | named_sound_effect | 16382.0ms
| NamedSoundEffect | named_sound_effect | 16385.0ms
| NamedSoundEffect | named_sound_effect | 16388.0ms
| NamedSoundEffect | named_sound_effect | 16715.0ms
| NamedSoundEffect | named_sound_effect | 16717.0ms
| NamedSoundEffect | named_sound_effect | 16720.0ms
| NamedSoundEffect | named_sound_effect | 16725.0ms
| NamedSoundEffect | named_sound_effect | 16728.0ms
| NamedSoundEffect | named_sound_effect | 16731.0ms
| NamedSoundEffect | named_sound_effect | 16734.0ms
| NamedSoundEffect | named_sound_effect | 16739.0ms
| NamedSoundEffect | named_sound_effect | 16741.0ms
| NamedSoundEffect | named_sound_effect | 16746.0ms
| NamedSoundEffect | named_sound_effect | 16749.0ms
| NamedSoundEffect | named_sound_effect | 16752.0ms
| NamedSoundEffect | named_sound_effect | 16755.0ms
| NamedSoundEffect | named_sound_effect | 16759.0ms
| NamedSoundEffect | named_sound_effect | 17228.0ms
| NamedSoundEffect | named_sound_effect | 17231.0ms
| NamedSoundEffect | named_sound_effect | 17234.0ms
| NamedSoundEffect | named_sound_effect | 17236.0ms
| NamedSoundEffect | named_sound_effect | 17239.0ms
| NamedSoundEffect | named_sound_effect | 17244.0ms
| NamedSoundEffect | named_sound_effect | 17246.0ms
| NamedSoundEffect | named_sound_effect | 17250.0ms
| NamedSoundEffect | named_sound_effect | 17252.0ms
| NamedSoundEffect | named_sound_effect | 17255.0ms
| NamedSoundEffect | named_sound_effect | 17258.0ms
| NamedSoundEffect | named_sound_effect | 17424.0ms
| NamedSoundEffect | named_sound_effect | 17427.0ms
| NamedSoundEffect | named_sound_effect | 17430.0ms
| NamedSoundEffect | named_sound_effect | 17435.0ms
| NamedSoundEffect | named_sound_effect | 17532.0ms
| NamedSoundEffect | named_sound_effect | 17535.0ms
| NamedSoundEffect | named_sound_effect | 17538.0ms
| NamedSoundEffect | named_sound_effect | 17542.0ms
| NamedSoundEffect | named_sound_effect | 17547.0ms
| NamedSoundEffect | named_sound_effect | 17665.0ms
| NamedSoundEffect | named_sound_effect | 17670.0ms
| NamedSoundEffect | named_sound_effect | 17769.0ms
| NamedSoundEffect | named_sound_effect | 17772.0ms
| NamedSoundEffect | named_sound_effect | 17775.0ms
| NamedSoundEffect | named_sound_effect | 17778.0ms
| NamedSoundEffect | named_sound_effect | 17780.0ms
| NamedSoundEffect | named_sound_effect | 17955.0ms
| NamedSoundEffect | named_sound_effect | 18025.0ms
| NamedSoundEffect | named_sound_effect | 18028.0ms
| NamedSoundEffect | named_sound_effect | 18030.0ms
| NamedSoundEffect | named_sound_effect | 18115.0ms
| NamedSoundEffect | named_sound_effect | 18117.0ms
| NamedSoundEffect | named_sound_effect | 18119.0ms
| NamedSoundEffect | named_sound_effect | 18122.0ms
| NamedSoundEffect | named_sound_effect | 18527.0ms
| NamedSoundEffect | named_sound_effect | 18530.0ms
| NamedSoundEffect | named_sound_effect | 18534.0ms
| NamedSoundEffect | named_sound_effect | 18537.0ms
| NamedSoundEffect | named_sound_effect | 18540.0ms
| NamedSoundEffect | named_sound_effect | 18543.0ms
| NamedSoundEffect | named_sound_effect | 18546.0ms
| NamedSoundEffect | named_sound_effect | 18548.0ms
| NamedSoundEffect | named_sound_effect | 18553.0ms
| NamedSoundEffect | named_sound_effect | 18674.0ms
| NamedSoundEffect | named_sound_effect | 18676.0ms
| NamedSoundEffect | named_sound_effect | 18680.0ms
| NamedSoundEffect | named_sound_effect | 18683.0ms
| NamedSoundEffect | named_sound_effect | 18685.0ms
| NamedSoundEffect | named_sound_effect | 18741.0ms
| NamedSoundEffect | named_sound_effect | 18841.0ms
| NamedSoundEffect | named_sound_effect | 18917.0ms
| NamedSoundEffect | named_sound_effect | 18921.0ms
| NamedSoundEffect | named_sound_effect | 18924.0ms
| NamedSoundEffect | named_sound_effect | 18970.0ms
| NamedSoundEffect | named_sound_effect | 19004.0ms
| NamedSoundEffect | named_sound_effect | 19043.0ms
| NamedSoundEffect | named_sound_effect | 19158.0ms
| NamedSoundEffect | named_sound_effect | 19161.0ms
| NamedSoundEffect | named_sound_effect | 19163.0ms
| NamedSoundEffect | named_sound_effect | 19229.0ms
| NamedSoundEffect | named_sound_effect | 19286.0ms
| NamedSoundEffect | named_sound_effect | 19288.0ms
| NamedSoundEffect | named_sound_effect | 19357.0ms
| NamedSoundEffect | named_sound_effect | 19401.0ms
| NamedSoundEffect | named_sound_effect | 19406.0ms
| NamedSoundEffect | named_sound_effect | 19457.0ms
| EntityTeleport | entity_teleport | 19542.0ms
| NamedSoundEffect | named_sound_effect | 19544.0ms
| NamedSoundEffect | named_sound_effect | 19615.0ms
| NamedSoundEffect | named_sound_effect | 19620.0ms
| NamedSoundEffect | named_sound_effect | 19675.0ms
| NamedSoundEffect | named_sound_effect | 19698.0ms
| NamedSoundEffect | named_sound_effect | 19737.0ms
| NamedSoundEffect | named_sound_effect | 19739.0ms
| NamedSoundEffect | named_sound_effect | 19743.0ms
| NamedSoundEffect | named_sound_effect | 19856.0ms
| NamedSoundEffect | named_sound_effect | 19859.0ms
| NamedSoundEffect | named_sound_effect | 19936.0ms
| NamedSoundEffect | named_sound_effect | 20047.0ms
| NamedSoundEffect | named_sound_effect | 20087.0ms
| NamedSoundEffect | named_sound_effect | 20089.0ms
| NamedSoundEffect | named_sound_effect | 20091.0ms
| NamedSoundEffect | named_sound_effect | 20211.0ms
| NamedSoundEffect | named_sound_effect | 20215.0ms
| NamedSoundEffect | named_sound_effect | 20217.0ms
| NamedSoundEffect | named_sound_effect | 20265.0ms
| NamedSoundEffect | named_sound_effect | 20352.0ms
| NamedSoundEffect | named_sound_effect | 20355.0ms
| NamedSoundEffect | named_sound_effect | 20619.0ms
| NamedSoundEffect | named_sound_effect | 20622.0ms
| NamedSoundEffect | named_sound_effect | 20626.0ms
| NamedSoundEffect | named_sound_effect | 20630.0ms
| NamedSoundEffect | named_sound_effect | 20633.0ms
| NamedSoundEffect | named_sound_effect | 20635.0ms
| NamedSoundEffect | named_sound_effect | 20756.0ms
| NamedSoundEffect | named_sound_effect | 20759.0ms
| NamedSoundEffect | named_sound_effect | 20861.0ms
| NamedSoundEffect | named_sound_effect | 20865.0ms
| NamedSoundEffect | named_sound_effect | 20867.0ms
| PlayerInfo | player_info | 20869.0ms
| NamedSoundEffect | named_sound_effect | 21144.0ms
| Chat | chat | 21410.0ms
| PlayerInfo | player_info | 21412.0ms
| NamedEntitySpawn | named_entity_spawn | 21414.0ms
| EntityMetadata | entity_metadata | 21417.0ms
| EntityUpdateAttributes | entity_update_attributes | 21422.0ms
| EntityTeleport | entity_teleport | 21425.0ms
| EntityUpdateAttributes | entity_update_attributes | 21428.0ms
| NamedSoundEffect | named_sound_effect | 21430.0ms
| EntityTeleport | entity_teleport | 21432.0ms
| NamedSoundEffect | named_sound_effect | 21434.0ms
| NamedSoundEffect | named_sound_effect | 21437.0ms
| NamedSoundEffect | named_sound_effect | 21440.0ms
| NamedSoundEffect | named_sound_effect | 21443.0ms
| NamedSoundEffect | named_sound_effect | 21448.0ms
| NamedSoundEffect | named_sound_effect | 21450.0ms
| NamedSoundEffect | named_sound_effect | 22173.0ms
| NamedSoundEffect | named_sound_effect | 22175.0ms
| NamedSoundEffect | named_sound_effect | 22178.0ms
| NamedSoundEffect | named_sound_effect | 22181.0ms
| NamedSoundEffect | named_sound_effect | 22186.0ms
| NamedSoundEffect | named_sound_effect | 22189.0ms
| NamedSoundEffect | named_sound_effect | 22192.0ms
| NamedSoundEffect | named_sound_effect | 22195.0ms
| NamedSoundEffect | named_sound_effect | 22197.0ms
| NamedSoundEffect | named_sound_effect | 22200.0ms
| NamedSoundEffect | named_sound_effect | 22204.0ms
| NamedSoundEffect | named_sound_effect | 22207.0ms
| NamedSoundEffect | named_sound_effect | 22209.0ms
| NamedSoundEffect | named_sound_effect | 22212.0ms
| NamedSoundEffect | named_sound_effect | 22215.0ms
| NamedSoundEffect | named_sound_effect | 22219.0ms
| NamedSoundEffect | named_sound_effect | 22222.0ms
| NamedSoundEffect | named_sound_effect | 22225.0ms
| NamedSoundEffect | named_sound_effect | 22227.0ms
| NamedSoundEffect | named_sound_effect | 22240.0ms
| NamedSoundEffect | named_sound_effect | 22243.0ms
| NamedSoundEffect | named_sound_effect | 22246.0ms
| NamedSoundEffect | named_sound_effect | 22252.0ms
| NamedSoundEffect | named_sound_effect | 22255.0ms
| EntityTeleport | entity_teleport | 23009.0ms
| NamedSoundEffect | named_sound_effect | 23013.0ms
| NamedSoundEffect | named_sound_effect | 23017.0ms
| NamedSoundEffect | named_sound_effect | 23020.0ms
| NamedSoundEffect | named_sound_effect | 23024.0ms
| NamedSoundEffect | named_sound_effect | 23029.0ms
| NamedSoundEffect | named_sound_effect | 23035.0ms
| NamedSoundEffect | named_sound_effect | 23039.0ms
| NamedSoundEffect | named_sound_effect | 23043.0ms
| NamedSoundEffect | named_sound_effect | 23046.0ms
| NamedSoundEffect | named_sound_effect | 23050.0ms
| NamedSoundEffect | named_sound_effect | 23055.0ms
| NamedSoundEffect | named_sound_effect | 23059.0ms
| NamedSoundEffect | named_sound_effect | 23062.0ms
| NamedSoundEffect | named_sound_effect | 23065.0ms
| NamedSoundEffect | named_sound_effect | 23068.0ms
| NamedSoundEffect | named_sound_effect | 23072.0ms
| NamedSoundEffect | named_sound_effect | 23077.0ms
| NamedSoundEffect | named_sound_effect | 23081.0ms
| NamedSoundEffect | named_sound_effect | 23085.0ms
| NamedSoundEffect | named_sound_effect | 23088.0ms
| NamedSoundEffect | named_sound_effect | 23091.0ms
| NamedSoundEffect | named_sound_effect | 23094.0ms
| NamedSoundEffect | named_sound_effect | 23650.0ms
| EntityLook | entity_look | 23652.0ms
| NamedSoundEffect | named_sound_effect | 23655.0ms
| NamedSoundEffect | named_sound_effect | 23657.0ms
| NamedSoundEffect | named_sound_effect | 23662.0ms
| NamedSoundEffect | named_sound_effect | 23665.0ms
| NamedSoundEffect | named_sound_effect | 23667.0ms
| NamedSoundEffect | named_sound_effect | 23670.0ms
| NamedSoundEffect | named_sound_effect | 23673.0ms
| NamedSoundEffect | named_sound_effect | 23678.0ms
| NamedSoundEffect | named_sound_effect | 23682.0ms
| NamedSoundEffect | named_sound_effect | 23685.0ms
| NamedSoundEffect | named_sound_effect | 23687.0ms
| NamedSoundEffect | named_sound_effect | 23690.0ms
| NamedSoundEffect | named_sound_effect | 23692.0ms
| NamedSoundEffect | named_sound_effect | 23695.0ms
| NamedSoundEffect | named_sound_effect | 23700.0ms
| NamedSoundEffect | named_sound_effect | 24102.0ms
| NamedSoundEffect | named_sound_effect | 24104.0ms
| NamedSoundEffect | named_sound_effect | 24107.0ms
| NamedSoundEffect | named_sound_effect | 24110.0ms
| NamedSoundEffect | named_sound_effect | 24114.0ms
| NamedSoundEffect | named_sound_effect | 24116.0ms
| NamedSoundEffect | named_sound_effect | 24119.0ms
| NamedSoundEffect | named_sound_effect | 24123.0ms
| NamedSoundEffect | named_sound_effect | 24126.0ms
| NamedSoundEffect | named_sound_effect | 24128.0ms
| NamedSoundEffect | named_sound_effect | 24133.0ms
| NamedSoundEffect | named_sound_effect | 24135.0ms
| NamedSoundEffect | named_sound_effect | 24137.0ms
| NamedSoundEffect | named_sound_effect | 24476.0ms
| NamedSoundEffect | named_sound_effect | 24480.0ms
| NamedSoundEffect | named_sound_effect | 24485.0ms
| NamedSoundEffect | named_sound_effect | 24487.0ms
| NamedSoundEffect | named_sound_effect | 24490.0ms
| NamedSoundEffect | named_sound_effect | 24492.0ms
| NamedSoundEffect | named_sound_effect | 24706.0ms
| NamedSoundEffect | named_sound_effect | 24710.0ms
| NamedSoundEffect | named_sound_effect | 24712.0ms
| NamedSoundEffect | named_sound_effect | 24714.0ms
| NamedSoundEffect | named_sound_effect | 24716.0ms
| NamedSoundEffect | named_sound_effect | 24718.0ms
| NamedSoundEffect | named_sound_effect | 24723.0ms
| NamedSoundEffect | named_sound_effect | 24725.0ms
| NamedSoundEffect | named_sound_effect | 24827.0ms
| NamedSoundEffect | named_sound_effect | 24829.0ms
| NamedSoundEffect | named_sound_effect | 24842.0ms
| EntityTeleport | entity_teleport | 24933.0ms
| NamedSoundEffect | named_sound_effect | 24936.0ms
| NamedSoundEffect | named_sound_effect | 24939.0ms
| NamedSoundEffect | named_sound_effect | 25020.0ms
| NamedSoundEffect | named_sound_effect | 25023.0ms
| NamedSoundEffect | named_sound_effect | 25072.0ms
| NamedSoundEffect | named_sound_effect | 25077.0ms
| NamedSoundEffect | named_sound_effect | 25156.0ms
| NamedSoundEffect | named_sound_effect | 25208.0ms
| NamedSoundEffect | named_sound_effect | 25212.0ms
| NamedSoundEffect | named_sound_effect | 25254.0ms
| NamedSoundEffect | named_sound_effect | 25306.0ms
| NamedSoundEffect | named_sound_effect | 25311.0ms
| NamedSoundEffect | named_sound_effect | 25335.0ms
| NamedSoundEffect | named_sound_effect | 25465.0ms
| NamedSoundEffect | named_sound_effect | 25467.0ms
| PlayerInfo | player_info | 25469.0ms
| NamedSoundEffect | named_sound_effect | 25561.0ms
| NamedSoundEffect | named_sound_effect | 25563.0ms
| NamedSoundEffect | named_sound_effect | 25565.0ms
| EntityTeleport | entity_teleport | 25566.0ms
| NamedSoundEffect | named_sound_effect | 25569.0ms
| NamedSoundEffect | named_sound_effect | 25780.0ms
| EntityLook | entity_look | 25782.0ms
| NamedSoundEffect | named_sound_effect | 25784.0ms
| NamedSoundEffect | named_sound_effect | 25786.0ms
| NamedSoundEffect | named_sound_effect | 25788.0ms
| NamedSoundEffect | named_sound_effect | 25792.0ms
| NamedSoundEffect | named_sound_effect | 25960.0ms
| NamedSoundEffect | named_sound_effect | 25963.0ms
| NamedSoundEffect | named_sound_effect | 25965.0ms
| NamedSoundEffect | named_sound_effect | 25968.0ms
| NamedSoundEffect | named_sound_effect | 26105.0ms
| NamedSoundEffect | named_sound_effect | 26108.0ms
| PlayerInfo | player_info | 26110.0ms
| NamedSoundEffect | named_sound_effect | 26394.0ms
| Chat | chat | 27096.0ms
| PlayerInfo | player_info | 27098.0ms
| NamedEntitySpawn | named_entity_spawn | 27102.0ms
| EntityMetadata | entity_metadata | 27106.0ms
| EntityUpdateAttributes | entity_update_attributes | 27109.0ms
| EntityTeleport | entity_teleport | 27111.0ms
| EntityUpdateAttributes | entity_update_attributes | 27114.0ms
| NamedSoundEffect | named_sound_effect | 27117.0ms
| NamedSoundEffect | named_sound_effect | 27125.0ms
| NamedSoundEffect | named_sound_effect | 27129.0ms
| NamedSoundEffect | named_sound_effect | 27132.0ms
| EntityTeleport | entity_teleport | 27135.0ms
| NamedSoundEffect | named_sound_effect | 27137.0ms
| NamedSoundEffect | named_sound_effect | 27141.0ms
| NamedSoundEffect | named_sound_effect | 27144.0ms
| NamedSoundEffect | named_sound_effect | 27147.0ms
| NamedSoundEffect | named_sound_effect | 27150.0ms
| NamedSoundEffect | named_sound_effect | 27153.0ms
| NamedSoundEffect | named_sound_effect | 27158.0ms
| NamedSoundEffect | named_sound_effect | 27161.0ms
| NamedSoundEffect | named_sound_effect | 27164.0ms
| NamedSoundEffect | named_sound_effect | 27167.0ms
| NamedSoundEffect | named_sound_effect | 28027.0ms
| NamedSoundEffect | named_sound_effect | 28031.0ms
| NamedSoundEffect | named_sound_effect | 28033.0ms
| NamedSoundEffect | named_sound_effect | 28038.0ms
| NamedSoundEffect | named_sound_effect | 28040.0ms
| NamedSoundEffect | named_sound_effect | 28043.0ms
| NamedSoundEffect | named_sound_effect | 28046.0ms
| NamedSoundEffect | named_sound_effect | 28048.0ms
| NamedSoundEffect | named_sound_effect | 28051.0ms
| NamedSoundEffect | named_sound_effect | 28055.0ms
| NamedSoundEffect | named_sound_effect | 28058.0ms
| NamedSoundEffect | named_sound_effect | 28061.0ms
| NamedSoundEffect | named_sound_effect | 28064.0ms
| NamedSoundEffect | named_sound_effect | 28066.0ms
| NamedSoundEffect | named_sound_effect | 28069.0ms
| NamedSoundEffect | named_sound_effect | 28074.0ms
| NamedSoundEffect | named_sound_effect | 28077.0ms
| NamedSoundEffect | named_sound_effect | 28081.0ms
| NamedSoundEffect | named_sound_effect | 28085.0ms
| NamedSoundEffect | named_sound_effect | 28087.0ms
| NamedSoundEffect | named_sound_effect | 28090.0ms
| NamedSoundEffect | named_sound_effect | 28094.0ms
| NamedSoundEffect | named_sound_effect | 28097.0ms
| NamedSoundEffect | named_sound_effect | 28100.0ms
| NamedSoundEffect | named_sound_effect | 28103.0ms
| NamedSoundEffect | named_sound_effect | 28105.0ms
| NamedSoundEffect | named_sound_effect | 28108.0ms
| NamedSoundEffect | named_sound_effect | 28112.0ms
| NamedSoundEffect | named_sound_effect | 28115.0ms
| NamedSoundEffect | named_sound_effect | 28117.0ms
| NamedSoundEffect | named_sound_effect | 28120.0ms
| NamedSoundEffect | named_sound_effect | 28123.0ms
| NamedSoundEffect | named_sound_effect | 28126.0ms
| NamedSoundEffect | named_sound_effect | 28131.0ms
| NamedSoundEffect | named_sound_effect | 28664.0ms
| NamedSoundEffect | named_sound_effect | 28666.0ms
| NamedSoundEffect | named_sound_effect | 28671.0ms
| NamedSoundEffect | named_sound_effect | 28673.0ms
| NamedSoundEffect | named_sound_effect | 28675.0ms
| NamedSoundEffect | named_sound_effect | 28678.0ms
| NamedSoundEffect | named_sound_effect | 28681.0ms
| NamedSoundEffect | named_sound_effect | 28683.0ms
| NamedSoundEffect | named_sound_effect | 28688.0ms
| NamedSoundEffect | named_sound_effect | 28690.0ms
| NamedSoundEffect | named_sound_effect | 28692.0ms
| NamedSoundEffect | named_sound_effect | 28695.0ms
| NamedSoundEffect | named_sound_effect | 28697.0ms
| NamedSoundEffect | named_sound_effect | 28700.0ms
| NamedSoundEffect | named_sound_effect | 28704.0ms
| NamedSoundEffect | named_sound_effect | 28707.0ms
| NamedSoundEffect | named_sound_effect | 28709.0ms
| NamedSoundEffect | named_sound_effect | 29026.0ms
| NamedSoundEffect | named_sound_effect | 29029.0ms
| NamedSoundEffect | named_sound_effect | 29031.0ms
| NamedSoundEffect | named_sound_effect | 29034.0ms
| NamedSoundEffect | named_sound_effect | 29039.0ms
| NamedSoundEffect | named_sound_effect | 29042.0ms
| NamedSoundEffect | named_sound_effect | 29045.0ms
| NamedSoundEffect | named_sound_effect | 29048.0ms
| NamedSoundEffect | named_sound_effect | 29050.0ms
| NamedSoundEffect | named_sound_effect | 29235.0ms
| NamedSoundEffect | named_sound_effect | 29238.0ms
| NamedSoundEffect | named_sound_effect | 29241.0ms
| NamedSoundEffect | named_sound_effect | 29244.0ms
| NamedSoundEffect | named_sound_effect | 29246.0ms
| NamedSoundEffect | named_sound_effect | 29382.0ms
| NamedSoundEffect | named_sound_effect | 29384.0ms
| NamedSoundEffect | named_sound_effect | 29389.0ms
| NamedSoundEffect | named_sound_effect | 29392.0ms
| NamedSoundEffect | named_sound_effect | 29395.0ms
| NamedSoundEffect | named_sound_effect | 29551.0ms
| NamedSoundEffect | named_sound_effect | 29554.0ms
| NamedSoundEffect | named_sound_effect | 29557.0ms
| NamedSoundEffect | named_sound_effect | 29688.0ms
| NamedSoundEffect | named_sound_effect | 29735.0ms
| NamedSoundEffect | named_sound_effect | 29804.0ms
| NamedSoundEffect | named_sound_effect | 29806.0ms
| NamedSoundEffect | named_sound_effect | 29808.0ms
| NamedSoundEffect | named_sound_effect | 29811.0ms
| NamedSoundEffect | named_sound_effect | 29816.0ms
| NamedSoundEffect | named_sound_effect | 29818.0ms
| NamedSoundEffect | named_sound_effect | 29949.0ms
| NamedSoundEffect | named_sound_effect | 30044.0ms
| NamedSoundEffect | named_sound_effect | 30046.0ms
| NamedSoundEffect | named_sound_effect | 30048.0ms
| NamedSoundEffect | named_sound_effect | 30054.0ms
| NamedSoundEffect | named_sound_effect | 30056.0ms
| EntityTeleport | entity_teleport | 30126.0ms
| NamedSoundEffect | named_sound_effect | 30179.0ms
| NamedSoundEffect | named_sound_effect | 30259.0ms
| NamedSoundEffect | named_sound_effect | 30261.0ms
| NamedSoundEffect | named_sound_effect | 30320.0ms
| NamedSoundEffect | named_sound_effect | 30323.0ms
| NamedSoundEffect | named_sound_effect | 30325.0ms
| KeepAlive | keep_alive | 30326.0ms
| NamedSoundEffect | named_sound_effect | 30417.0ms
| NamedSoundEffect | named_sound_effect | 30419.0ms
| NamedSoundEffect | named_sound_effect | 30910.0ms
| NamedSoundEffect | named_sound_effect | 30913.0ms
| NamedSoundEffect | named_sound_effect | 30916.0ms
| EntityTeleport | entity_teleport | 30918.0ms
| NamedSoundEffect | named_sound_effect | 30920.0ms
| NamedSoundEffect | named_sound_effect | 30923.0ms
| NamedSoundEffect | named_sound_effect | 30926.0ms
| NamedSoundEffect | named_sound_effect | 30928.0ms
| NamedSoundEffect | named_sound_effect | 30931.0ms
| NamedSoundEffect | named_sound_effect | 30935.0ms
| NamedSoundEffect | named_sound_effect | 30938.0ms
| NamedSoundEffect | named_sound_effect | 30941.0ms
| NamedSoundEffect | named_sound_effect | 30944.0ms
| NamedSoundEffect | named_sound_effect | 30946.0ms
| NamedSoundEffect | named_sound_effect | 31163.0ms
| NamedSoundEffect | named_sound_effect | 31166.0ms
| EntityTeleport | entity_teleport | 31168.0ms
| NamedSoundEffect | named_sound_effect | 31171.0ms
| NamedSoundEffect | named_sound_effect | 31173.0ms
| NamedSoundEffect | named_sound_effect | 31178.0ms
| NamedSoundEffect | named_sound_effect | 31181.0ms
| NamedSoundEffect | named_sound_effect | 31183.0ms
| NamedSoundEffect | named_sound_effect | 32116.0ms
| NamedSoundEffect | named_sound_effect | 32118.0ms
| NamedSoundEffect | named_sound_effect | 32120.0ms
| NamedSoundEffect | named_sound_effect | 32122.0ms
| NamedSoundEffect | named_sound_effect | 32124.0ms
| NamedSoundEffect | named_sound_effect | 32129.0ms
| NamedSoundEffect | named_sound_effect | 32132.0ms
| NamedSoundEffect | named_sound_effect | 32134.0ms
| NamedSoundEffect | named_sound_effect | 32137.0ms
| NamedSoundEffect | named_sound_effect | 32139.0ms
| NamedSoundEffect | named_sound_effect | 32142.0ms
| NamedSoundEffect | named_sound_effect | 32146.0ms
| NamedSoundEffect | named_sound_effect | 32149.0ms
| NamedSoundEffect | named_sound_effect | 32151.0ms
| NamedSoundEffect | named_sound_effect | 32154.0ms
| NamedSoundEffect | named_sound_effect | 32156.0ms
| NamedSoundEffect | named_sound_effect | 32160.0ms
| NamedSoundEffect | named_sound_effect | 32163.0ms
| NamedSoundEffect | named_sound_effect | 32165.0ms
| NamedSoundEffect | named_sound_effect | 32168.0ms
| NamedSoundEffect | named_sound_effect | 32170.0ms
| NamedSoundEffect | named_sound_effect | 32173.0ms
| NamedSoundEffect | named_sound_effect | 32175.0ms
| NamedSoundEffect | named_sound_effect | 33061.0ms
| NamedSoundEffect | named_sound_effect | 33064.0ms
| EntityLook | entity_look | 33067.0ms
| NamedSoundEffect | named_sound_effect | 33070.0ms
| NamedSoundEffect | named_sound_effect | 33073.0ms
| NamedSoundEffect | named_sound_effect | 33076.0ms
| NamedSoundEffect | named_sound_effect | 33080.0ms
| NamedSoundEffect | named_sound_effect | 33083.0ms
| NamedSoundEffect | named_sound_effect | 33086.0ms
| NamedSoundEffect | named_sound_effect | 33091.0ms
| NamedSoundEffect | named_sound_effect | 33094.0ms
| NamedSoundEffect | named_sound_effect | 33096.0ms
| NamedSoundEffect | named_sound_effect | 33100.0ms
| NamedSoundEffect | named_sound_effect | 33102.0ms
| NamedSoundEffect | named_sound_effect | 33105.0ms
| NamedSoundEffect | named_sound_effect | 33110.0ms
| NamedSoundEffect | named_sound_effect | 33113.0ms
| NamedSoundEffect | named_sound_effect | 33116.0ms
| NamedSoundEffect | named_sound_effect | 33119.0ms
| NamedSoundEffect | named_sound_effect | 33122.0ms
| NamedSoundEffect | named_sound_effect | 33125.0ms
| NamedSoundEffect | named_sound_effect | 33130.0ms
| NamedSoundEffect | named_sound_effect | 33133.0ms
| NamedSoundEffect | named_sound_effect | 33890.0ms
| NamedSoundEffect | named_sound_effect | 33893.0ms
| NamedSoundEffect | named_sound_effect | 33897.0ms
| NamedSoundEffect | named_sound_effect | 33900.0ms
| NamedSoundEffect | named_sound_effect | 33903.0ms
| NamedSoundEffect | named_sound_effect | 33906.0ms
| NamedSoundEffect | named_sound_effect | 33911.0ms
| NamedSoundEffect | named_sound_effect | 33914.0ms
| NamedSoundEffect | named_sound_effect | 33918.0ms
| NamedSoundEffect | named_sound_effect | 33921.0ms
| NamedSoundEffect | named_sound_effect | 33923.0ms
| NamedSoundEffect | named_sound_effect | 33926.0ms
| NamedSoundEffect | named_sound_effect | 33928.0ms
| NamedSoundEffect | named_sound_effect | 33931.0ms
| NamedSoundEffect | named_sound_effect | 33936.0ms
| NamedSoundEffect | named_sound_effect | 33939.0ms
| NamedSoundEffect | named_sound_effect | 33942.0ms
| NamedSoundEffect | named_sound_effect | 33944.0ms
| NamedSoundEffect | named_sound_effect | 33947.0ms
| NamedSoundEffect | named_sound_effect | 33950.0ms
| NamedSoundEffect | named_sound_effect | 34459.0ms
| NamedSoundEffect | named_sound_effect | 34462.0ms
| NamedSoundEffect | named_sound_effect | 34466.0ms
| NamedSoundEffect | named_sound_effect | 34468.0ms
| NamedSoundEffect | named_sound_effect | 34471.0ms
| NamedSoundEffect | named_sound_effect | 34473.0ms
| NamedSoundEffect | named_sound_effect | 34476.0ms
| NamedSoundEffect | named_sound_effect | 34478.0ms
| NamedSoundEffect | named_sound_effect | 34483.0ms
| NamedSoundEffect | named_sound_effect | 34485.0ms
| NamedSoundEffect | named_sound_effect | 34488.0ms
| NamedSoundEffect | named_sound_effect | 34490.0ms
| NamedSoundEffect | named_sound_effect | 34492.0ms
| NamedSoundEffect | named_sound_effect | 34494.0ms
| NamedSoundEffect | named_sound_effect | 34499.0ms
| NamedSoundEffect | named_sound_effect | 34501.0ms
| NamedSoundEffect | named_sound_effect | 34504.0ms
| Difficulty | difficulty | 34506.0ms
| NamedSoundEffect | named_sound_effect | 35042.0ms
| SpawnEntityLiving | spawn_entity_living | 35045.0ms
| EntityMetadata | entity_metadata | 35047.0ms
| EntityUpdateAttributes | entity_update_attributes | 35049.0ms
| EntityUpdateAttributes | entity_update_attributes | 35054.0ms
| NamedSoundEffect | named_sound_effect | 35057.0ms
| MultiBlockChange | multi_block_change | 35061.0ms
| EntityTeleport | entity_teleport | 35063.0ms
| NamedSoundEffect | named_sound_effect | 35065.0ms
| NamedSoundEffect | named_sound_effect | 35068.0ms
| NamedSoundEffect | named_sound_effect | 35072.0ms
| NamedSoundEffect | named_sound_effect | 35074.0ms
| NamedSoundEffect | named_sound_effect | 35076.0ms
| NamedSoundEffect | named_sound_effect | 35080.0ms
| NamedSoundEffect | named_sound_effect | 35082.0ms
| NamedSoundEffect | named_sound_effect | 35085.0ms
| WorldParticles | world_particles | 35089.0ms
| WorldParticles | world_particles | 35895.0ms
| WorldParticles | world_particles | 35897.0ms
| WorldParticles | world_particles | 35899.0ms
| WorldParticles | world_particles | 35901.0ms
| WorldParticles | world_particles | 35906.0ms
| WorldParticles | world_particles | 35908.0ms
| WorldParticles | world_particles | 35911.0ms
| WorldParticles | world_particles | 35914.0ms
| WorldParticles | world_particles | 35916.0ms
| WorldParticles | world_particles | 35918.0ms
| WorldParticles | world_particles | 35923.0ms
| NamedSoundEffect | named_sound_effect | 35925.0ms
| NamedSoundEffect | named_sound_effect | 35927.0ms
| EntityLook | entity_look | 35930.0ms
| NamedSoundEffect | named_sound_effect | 35933.0ms
| NamedSoundEffect | named_sound_effect | 35936.0ms
| NamedSoundEffect | named_sound_effect | 35940.0ms
| NamedSoundEffect | named_sound_effect | 35942.0ms
| NamedSoundEffect | named_sound_effect | 35945.0ms
| NamedSoundEffect | named_sound_effect | 35947.0ms
| NamedSoundEffect | named_sound_effect | 35950.0ms
| NamedSoundEffect | named_sound_effect | 35952.0ms
| NamedSoundEffect | named_sound_effect | 35957.0ms
| EntityTeleport | entity_teleport | 35959.0ms
| NamedSoundEffect | named_sound_effect | 35963.0ms
| NamedSoundEffect | named_sound_effect | 35966.0ms
| NamedSoundEffect | named_sound_effect | 35969.0ms
| NamedSoundEffect | named_sound_effect | 35971.0ms
| NamedSoundEffect | named_sound_effect | 35974.0ms
| NamedSoundEffect | named_sound_effect | 35979.0ms
| NamedSoundEffect | named_sound_effect | 35981.0ms
| NamedSoundEffect | named_sound_effect | 35984.0ms
| NamedSoundEffect | named_sound_effect | 35986.0ms
| NamedSoundEffect | named_sound_effect | 35988.0ms
| NamedSoundEffect | named_sound_effect | 35991.0ms
| EntityTeleport | entity_teleport | 35993.0ms
| NamedSoundEffect | named_sound_effect | 35996.0ms
| NamedSoundEffect | named_sound_effect | 35999.0ms
| NamedSoundEffect | named_sound_effect | 36002.0ms
| NamedSoundEffect | named_sound_effect | 36004.0ms
| NamedSoundEffect | named_sound_effect | 36006.0ms
| NamedSoundEffect | named_sound_effect | 36981.0ms
| NamedSoundEffect | named_sound_effect | 36985.0ms
| Title | title | 36988.0ms
| NamedSoundEffect | named_sound_effect | 36991.0ms
| NamedSoundEffect | named_sound_effect | 36993.0ms
| NamedSoundEffect | named_sound_effect | 36995.0ms
| NamedSoundEffect | named_sound_effect | 36997.0ms
| NamedSoundEffect | named_sound_effect | 37000.0ms
| NamedSoundEffect | named_sound_effect | 37004.0ms
| Title | title | 37006.0ms
| NamedSoundEffect | named_sound_effect | 37009.0ms
| NamedSoundEffect | named_sound_effect | 37012.0ms
| GameStateChange | game_state_change | 37014.0ms
| GameStateChange | game_state_change | 37016.0ms
| NamedSoundEffect | named_sound_effect | 37018.0ms
| GameStateChange | game_state_change | 37020.0ms
| NamedSoundEffect | named_sound_effect | 37023.0ms
| NamedSoundEffect | named_sound_effect | 37026.0ms
| NamedSoundEffect | named_sound_effect | 37028.0ms
| NamedSoundEffect | named_sound_effect | 37031.0ms
| PlayerInfo | player_info | 37033.0ms
| PlayerInfo | player_info | 37037.0ms
| PlayerInfo | player_info | 37040.0ms
| PlayerInfo | player_info | 37042.0ms
| PlayerInfo | player_info | 37045.0ms
| Abilities | abilities | 37047.0ms
| PlayerInfo | player_info | 37049.0ms
| GameStateChange | game_state_change | 37051.0ms
| Abilities | abilities | 37052.0ms
| Chat | chat | 37054.0ms
| PlayerInfo | player_info | 37057.0ms
| PlayerInfo | player_info | 37059.0ms
| PlayerInfo | player_info | 37062.0ms
| PlayerInfo | player_info | 37064.0ms
| PlayerInfo | player_info | 37068.0ms
| GameStateChange | game_state_change | 37071.0ms
| Experience | experience | 37073.0ms
| GameStateChange | game_state_change | 37075.0ms
| NamedSoundEffect | named_sound_effect | 37078.0ms
| NamedSoundEffect | named_sound_effect | 37080.0ms
| NamedSoundEffect | named_sound_effect | 37085.0ms
| GameStateChange | game_state_change | 37087.0ms
| NamedSoundEffect | named_sound_effect | 37090.0ms
| GameStateChange | game_state_change | 37092.0ms
| GameStateChange | game_state_change | 37095.0ms
| NamedSoundEffect | named_sound_effect | 37098.0ms
| GameStateChange | game_state_change | 37099.0ms
| NamedSoundEffect | named_sound_effect | 37102.0ms
| GameStateChange | game_state_change | 37105.0ms
| NamedSoundEffect | named_sound_effect | 37107.0ms
| GameStateChange | game_state_change | 37109.0ms
| NamedSoundEffect | named_sound_effect | 37112.0ms
| NamedSoundEffect | named_sound_effect | 37117.0ms
| NamedSoundEffect | named_sound_effect | 37119.0ms
| GameStateChange | game_state_change | 37121.0ms
| NamedSoundEffect | named_sound_effect | 37124.0ms
| GameStateChange | game_state_change | 37126.0ms
| GameStateChange | game_state_change | 39119.0ms
| NamedSoundEffect | named_sound_effect | 39122.0ms
| NamedSoundEffect | named_sound_effect | 39124.0ms
| GameStateChange | game_state_change | 39125.0ms
| NamedSoundEffect | named_sound_effect | 39128.0ms
| GameStateChange | game_state_change | 39130.0ms
| NamedSoundEffect | named_sound_effect | 39133.0ms
| GameStateChange | game_state_change | 39135.0ms
| NamedSoundEffect | named_sound_effect | 39137.0ms
| GameStateChange | game_state_change | 39139.0ms
| NamedSoundEffect | named_sound_effect | 39142.0ms
| GameStateChange | game_state_change | 39144.0ms
| NamedSoundEffect | named_sound_effect | 39146.0ms
| NamedSoundEffect | named_sound_effect | 39149.0ms
| NamedSoundEffect | named_sound_effect | 39151.0ms
| NamedSoundEffect | named_sound_effect | 39156.0ms
| GameStateChange | game_state_change | 39158.0ms
| GameStateChange | game_state_change | 39160.0ms
| NamedSoundEffect | named_sound_effect | 39162.0ms
| GameStateChange | game_state_change | 39164.0ms
| GameStateChange | game_state_change | 39166.0ms
| GameStateChange | game_state_change | 39171.0ms
| GameStateChange | game_state_change | 39174.0ms
| NamedSoundEffect | named_sound_effect | 39176.0ms
| NamedSoundEffect | named_sound_effect | 39178.0ms
| NamedSoundEffect | named_sound_effect | 39180.0ms
| NamedSoundEffect | named_sound_effect | 39183.0ms
| GameStateChange | game_state_change | 39184.0ms
| NamedSoundEffect | named_sound_effect | 39187.0ms
| GameStateChange | game_state_change | 39190.0ms
| GameStateChange | game_state_change | 39192.0ms
| NamedSoundEffect | named_sound_effect | 39195.0ms
| NamedSoundEffect | named_sound_effect | 39197.0ms
| GameStateChange | game_state_change | 39198.0ms
| NamedSoundEffect | named_sound_effect | 39201.0ms
| NamedSoundEffect | named_sound_effect | 39204.0ms
| GameStateChange | game_state_change | 39206.0ms
| NamedSoundEffect | named_sound_effect | 39209.0ms
| GameStateChange | game_state_change | 39211.0ms
| NamedSoundEffect | named_sound_effect | 39213.0ms
| GameStateChange | game_state_change | 39215.0ms
| NamedSoundEffect | named_sound_effect | 39218.0ms
| NamedSoundEffect | named_sound_effect | 39221.0ms
| GameStateChange | game_state_change | 39223.0ms
| GameStateChange | game_state_change | 39225.0ms
| NamedSoundEffect | named_sound_effect | 39229.0ms
| NamedSoundEffect | named_sound_effect | 39231.0ms
| GameStateChange | game_state_change | 39233.0ms
| GameStateChange | game_state_change | 39236.0ms
| GameStateChange | game_state_change | 39238.0ms
| NamedSoundEffect | named_sound_effect | 39241.0ms
| NamedSoundEffect | named_sound_effect | 39245.0ms
| NamedSoundEffect | named_sound_effect | 39248.0ms
| GameStateChange | game_state_change | 39250.0ms
| NamedSoundEffect | named_sound_effect | 39253.0ms
| NamedSoundEffect | named_sound_effect | 39255.0ms
| GameStateChange | game_state_change | 39257.0ms
| NamedSoundEffect | named_sound_effect | 39260.0ms
| NamedSoundEffect | named_sound_effect | 39278.0ms
| GameStateChange | game_state_change | 39280.0ms
| EntityLook | entity_look | 39282.0ms
| NamedSoundEffect | named_sound_effect | 39290.0ms
| GameStateChange | game_state_change | 39293.0ms
| GameStateChange | game_state_change | 39297.0ms
| GameStateChange | game_state_change | 39311.0ms
| NamedSoundEffect | named_sound_effect | 39314.0ms
| GameStateChange | game_state_change | 39316.0ms
| NamedSoundEffect | named_sound_effect | 39319.0ms
| NamedSoundEffect | named_sound_effect | 39322.0ms
| GameStateChange | game_state_change | 39324.0ms
| NamedSoundEffect | named_sound_effect | 39327.0ms
| NamedSoundEffect | named_sound_effect | 39331.0ms
| NamedSoundEffect | named_sound_effect | 39333.0ms
| Chat | chat | 40170.0ms
| Chat | chat | 40209.0ms
| Chat | chat | 40258.0ms
| Chat | chat | 40299.0ms
| Chat | chat | 40341.0ms
| Chat | chat | 40379.0ms
| Chat | chat | 40419.0ms
| Chat | chat | 40501.0ms
| Chat | chat | 40603.0ms
| Chat | chat | 40677.0ms
| Chat | chat | 40730.0ms
| Chat | chat | 40860.0ms
| GameStateChange | game_state_change | 40863.0ms
| Advancements | advancements | 43626.0ms
| Experience | experience | 43629.0ms
| NamedSoundEffect | named_sound_effect | 43632.0ms
| NamedSoundEffect | named_sound_effect | 43634.0ms
| GameStateChange | game_state_change | 43636.0ms
| GameStateChange | game_state_change | 43639.0ms
| NamedSoundEffect | named_sound_effect | 43642.0ms
| GameStateChange | game_state_change | 43644.0ms
| NamedSoundEffect | named_sound_effect | 43647.0ms
| GameStateChange | game_state_change | 43649.0ms
| GameStateChange | game_state_change | 43652.0ms
| NamedSoundEffect | named_sound_effect | 43656.0ms
| NamedSoundEffect | named_sound_effect | 43660.0ms
| GameStateChange | game_state_change | 43663.0ms
| GameStateChange | game_state_change | 43665.0ms
| NamedSoundEffect | named_sound_effect | 43668.0ms
| NamedSoundEffect | named_sound_effect | 43671.0ms
| NamedSoundEffect | named_sound_effect | 43673.0ms
| GameStateChange | game_state_change | 43675.0ms
| NamedSoundEffect | named_sound_effect | 43678.0ms
| NamedSoundEffect | named_sound_effect | 43681.0ms
| NamedSoundEffect | named_sound_effect | 43684.0ms
| GameStateChange | game_state_change | 43686.0ms
| NamedSoundEffect | named_sound_effect | 43689.0ms
| GameStateChange | game_state_change | 43691.0ms
| GameStateChange | game_state_change | 43696.0ms
| GameStateChange | game_state_change | 43698.0ms
| NamedSoundEffect | named_sound_effect | 43702.0ms
| NamedSoundEffect | named_sound_effect | 43704.0ms
| GameStateChange | game_state_change | 43706.0ms
| GameStateChange | game_state_change | 43711.0ms
| NamedSoundEffect | named_sound_effect | 43714.0ms
| NamedSoundEffect | named_sound_effect | 43716.0ms
| GameStateChange | game_state_change | 43718.0ms
| GameStateChange | game_state_change | 43721.0ms
| NamedSoundEffect | named_sound_effect | 43724.0ms
| NamedSoundEffect | named_sound_effect | 43729.0ms
| NamedSoundEffect | named_sound_effect | 43731.0ms
| NamedSoundEffect | named_sound_effect | 43734.0ms
| NamedSoundEffect | named_sound_effect | 43737.0ms
| GameStateChange | game_state_change | 43739.0ms
| NamedSoundEffect | named_sound_effect | 43741.0ms
| GameStateChange | game_state_change | 43743.0ms
| NamedSoundEffect | named_sound_effect | 43746.0ms
| GameStateChange | game_state_change | 43748.0ms
| GameStateChange | game_state_change | 43751.0ms
| EntityTeleport | entity_teleport | 43753.0ms
| NamedSoundEffect | named_sound_effect | 43756.0ms
| NamedSoundEffect | named_sound_effect | 43760.0ms
| GameStateChange | game_state_change | 43762.0ms
| NamedSoundEffect | named_sound_effect | 43765.0ms
| GameStateChange | game_state_change | 43767.0ms
| GameStateChange | game_state_change | 43769.0ms
| GameStateChange | game_state_change | 43772.0ms
| NamedSoundEffect | named_sound_effect | 43774.0ms
| NamedSoundEffect | named_sound_effect | 43778.0ms
| GameStateChange | game_state_change | 43781.0ms
| NamedSoundEffect | named_sound_effect | 43783.0ms
| NamedSoundEffect | named_sound_effect | 43786.0ms
| NamedSoundEffect | named_sound_effect | 43788.0ms
| GameStateChange | game_state_change | 43790.0ms
| NamedSoundEffect | named_sound_effect | 43792.0ms
| NamedSoundEffect | named_sound_effect | 43795.0ms
| GameStateChange | game_state_change | 43797.0ms
| NamedSoundEffect | named_sound_effect | 43800.0ms
| GameStateChange | game_state_change | 43802.0ms
| NamedSoundEffect | named_sound_effect | 43804.0ms
| GameStateChange | game_state_change | 43807.0ms
| GameStateChange | game_state_change | 43810.0ms
| GameStateChange | game_state_change | 43812.0ms
| NamedSoundEffect | named_sound_effect | 43815.0ms
| NamedSoundEffect | named_sound_effect | 43817.0ms
| NamedSoundEffect | named_sound_effect | 43822.0ms
| GameStateChange | game_state_change | 43824.0ms
| NamedSoundEffect | named_sound_effect | 43827.0ms
| GameStateChange | game_state_change | 43829.0ms
| NamedSoundEffect | named_sound_effect | 43831.0ms
| NamedSoundEffect | named_sound_effect | 43833.0ms
| GameStateChange | game_state_change | 43835.0ms
| NamedSoundEffect | named_sound_effect | 43838.0ms
| GameStateChange | game_state_change | 43840.0ms
| NamedSoundEffect | named_sound_effect | 43843.0ms
| NamedSoundEffect | named_sound_effect | 43845.0ms
| GameStateChange | game_state_change | 43847.0ms
| NamedSoundEffect | named_sound_effect | 43850.0ms
| GameStateChange | game_state_change | 43852.0ms
| GameStateChange | game_state_change | 43855.0ms
| NamedSoundEffect | named_sound_effect | 43857.0ms
| NamedSoundEffect | named_sound_effect | 43860.0ms
| GameStateChange | game_state_change | 43862.0ms
| GameStateChange | game_state_change | 43866.0ms
| NamedSoundEffect | named_sound_effect | 43869.0ms
| NamedSoundEffect | named_sound_effect | 43871.0ms
| GameStateChange | game_state_change | 43873.0ms
| NamedSoundEffect | named_sound_effect | 43876.0ms
| GameStateChange | game_state_change | 43878.0ms
| NamedSoundEffect | named_sound_effect | 43881.0ms
| NamedSoundEffect | named_sound_effect | 43885.0ms
| NamedSoundEffect | named_sound_effect | 43887.0ms
| GameStateChange | game_state_change | 43889.0ms
| GameStateChange | game_state_change | 43891.0ms
| NamedSoundEffect | named_sound_effect | 43894.0ms
| GameStateChange | game_state_change | 43896.0ms
| NamedSoundEffect | named_sound_effect | 43899.0ms
| NamedSoundEffect | named_sound_effect | 43902.0ms
| GameStateChange | game_state_change | 43904.0ms
| GameStateChange | game_state_change | 43906.0ms
| NamedSoundEffect | named_sound_effect | 43909.0ms
| GameStateChange | game_state_change | 43911.0ms
| EntityLook | entity_look | 43913.0ms
| EntityTeleport | entity_teleport | 43915.0ms
| NamedSoundEffect | named_sound_effect | 43918.0ms
| NamedSoundEffect | named_sound_effect | 43921.0ms
| GameStateChange | game_state_change | 43923.0ms
| NamedSoundEffect | named_sound_effect | 43925.0ms
| NamedSoundEffect | named_sound_effect | 43930.0ms
| GameStateChange | game_state_change | 43932.0ms
| NamedSoundEffect | named_sound_effect | 43935.0ms
| NamedSoundEffect | named_sound_effect | 43937.0ms
| GameStateChange | game_state_change | 43939.0ms
| NamedSoundEffect | named_sound_effect | 43941.0ms
| GameStateChange | game_state_change | 43943.0ms
| GameStateChange | game_state_change | 43948.0ms
| NamedSoundEffect | named_sound_effect | 43951.0ms
| GameStateChange | game_state_change | 43953.0ms
| NamedSoundEffect | named_sound_effect | 43955.0ms
| NamedSoundEffect | named_sound_effect | 43957.0ms
| GameStateChange | game_state_change | 43959.0ms
| NamedSoundEffect | named_sound_effect | 43962.0ms
| GameStateChange | game_state_change | 43964.0ms
| NamedSoundEffect | named_sound_effect | 43967.0ms
| NamedSoundEffect | named_sound_effect | 43970.0ms
| NamedSoundEffect | named_sound_effect | 43972.0ms
| NamedSoundEffect | named_sound_effect | 43977.0ms
| NamedSoundEffect | named_sound_effect | 43990.0ms
| NamedSoundEffect | named_sound_effect | 43994.0ms
| NamedSoundEffect | named_sound_effect | 43997.0ms
| NamedSoundEffect | named_sound_effect | 44000.0ms
| NamedSoundEffect | named_sound_effect | 44003.0ms
| NamedSoundEffect | named_sound_effect | 44008.0ms
| NamedSoundEffect | named_sound_effect | 44010.0ms
| NamedSoundEffect | named_sound_effect | 44012.0ms
| NamedSoundEffect | named_sound_effect | 44015.0ms
| NamedSoundEffect | named_sound_effect | 44017.0ms
| NamedSoundEffect | named_sound_effect | 44019.0ms
| NamedSoundEffect | named_sound_effect | 44024.0ms
| NamedSoundEffect | named_sound_effect | 44027.0ms
| NamedSoundEffect | named_sound_effect | 44029.0ms
| NamedSoundEffect | named_sound_effect | 44041.0ms
| EntityTeleport | entity_teleport | 46569.0ms
| NamedSoundEffect | named_sound_effect | 46572.0ms
| NamedSoundEffect | named_sound_effect | 46575.0ms
| NamedSoundEffect | named_sound_effect | 46578.0ms
| NamedSoundEffect | named_sound_effect | 46580.0ms
| NamedSoundEffect | named_sound_effect | 46584.0ms
| NamedSoundEffect | named_sound_effect | 46588.0ms
| NamedSoundEffect | named_sound_effect | 46592.0ms
| NamedSoundEffect | named_sound_effect | 46595.0ms
| NamedSoundEffect | named_sound_effect | 46598.0ms
| NamedSoundEffect | named_sound_effect | 46602.0ms
| NamedSoundEffect | named_sound_effect | 46606.0ms
| NamedSoundEffect | named_sound_effect | 46610.0ms
| NamedSoundEffect | named_sound_effect | 46614.0ms
| NamedSoundEffect | named_sound_effect | 46617.0ms
| NamedSoundEffect | named_sound_effect | 46620.0ms
| NamedSoundEffect | named_sound_effect | 46623.0ms
| NamedSoundEffect | named_sound_effect | 46626.0ms
| NamedSoundEffect | named_sound_effect | 46631.0ms
| NamedSoundEffect | named_sound_effect | 46634.0ms
| NamedSoundEffect | named_sound_effect | 46637.0ms
| NamedSoundEffect | named_sound_effect | 46640.0ms
| NamedSoundEffect | named_sound_effect | 46643.0ms
| NamedSoundEffect | named_sound_effect | 46646.0ms
| NamedSoundEffect | named_sound_effect | 46650.0ms
| NamedSoundEffect | named_sound_effect | 46654.0ms
| NamedSoundEffect | named_sound_effect | 46657.0ms
| NamedSoundEffect | named_sound_effect | 46660.0ms
| NamedSoundEffect | named_sound_effect | 46663.0ms
| NamedSoundEffect | named_sound_effect | 46665.0ms
| NamedSoundEffect | named_sound_effect | 46670.0ms
| NamedSoundEffect | named_sound_effect | 46673.0ms
| NamedSoundEffect | named_sound_effect | 46677.0ms
| NamedSoundEffect | named_sound_effect | 46680.0ms
| NamedSoundEffect | named_sound_effect | 46683.0ms
| NamedSoundEffect | named_sound_effect | 46686.0ms
| NamedSoundEffect | named_sound_effect | 46691.0ms
| NamedSoundEffect | named_sound_effect | 46693.0ms
| NamedSoundEffect | named_sound_effect | 46697.0ms
| NamedSoundEffect | named_sound_effect | 46700.0ms
| NamedSoundEffect | named_sound_effect | 46703.0ms
| NamedSoundEffect | named_sound_effect | 46706.0ms
| NamedSoundEffect | named_sound_effect | 46711.0ms
| NamedSoundEffect | named_sound_effect | 46714.0ms
| NamedSoundEffect | named_sound_effect | 46716.0ms
| NamedSoundEffect | named_sound_effect | 46719.0ms
| NamedSoundEffect | named_sound_effect | 46721.0ms
| NamedSoundEffect | named_sound_effect | 46724.0ms
| NamedSoundEffect | named_sound_effect | 46728.0ms
| NamedSoundEffect | named_sound_effect | 46731.0ms
| NamedSoundEffect | named_sound_effect | 46734.0ms
| NamedSoundEffect | named_sound_effect | 46737.0ms
| NamedSoundEffect | named_sound_effect | 46739.0ms
| NamedSoundEffect | named_sound_effect | 46742.0ms
| NamedSoundEffect | named_sound_effect | 46746.0ms
| NamedSoundEffect | named_sound_effect | 46749.0ms
| NamedSoundEffect | named_sound_effect | 46752.0ms
| NamedSoundEffect | named_sound_effect | 46754.0ms
| NamedSoundEffect | named_sound_effect | 46756.0ms
| NamedSoundEffect | named_sound_effect | 46758.0ms
| NamedSoundEffect | named_sound_effect | 46763.0ms
| EntityDestroy | entity_destroy | 46766.0ms
| PlayerInfo | player_info | 46770.0ms
| Chat | chat | 47521.0ms
| EntityDestroy | entity_destroy | 47523.0ms
| PlayerInfo | player_info | 47526.0ms
| Chat | chat | 47772.0ms
| EntityDestroy | entity_destroy | 47774.0ms
| PlayerInfo | player_info | 47776.0ms
| Chat | chat | 47961.0ms
| EntityDestroy | entity_destroy | 47963.0ms
| PlayerInfo | player_info | 47966.0ms
| Chat | chat | 48164.0ms
| EntityDestroy | entity_destroy | 48166.0ms
| PlayerInfo | player_info | 48168.0ms
| Chat | chat | 48371.0ms
| EntityDestroy | entity_destroy | 48373.0ms
| PlayerInfo | player_info | 48376.0ms
| Chat | chat | 48480.0ms
| CloseWindow | close_window | 48482.0ms
| EntityDestroy | entity_destroy | 48484.0ms
| EntityDestroy | entity_destroy | 48487.0ms
| EntityDestroy | entity_destroy | 48489.0ms
| EntityDestroy | entity_destroy | 48491.0ms
| EntityDestroy | entity_destroy | 48493.0ms
| EntityDestroy | entity_destroy | 48495.0ms
| EntityDestroy | entity_destroy | 48500.0ms
| EntityDestroy | entity_destroy | 48502.0ms
| Abilities | abilities | 48504.0ms
| EntityUpdateAttributes | entity_update_attributes | 48507.0ms
| Respawn | respawn | 48510.0ms
| Position | position | 48513.0ms
| SpawnPosition | spawn_position | 48516.0ms
| Difficulty | difficulty | 48517.0ms
| Experience | experience | 48519.0ms
| WorldBorder | world_border | 48522.0ms
| SpawnPosition | spawn_position | 48524.0ms
| EntityStatus | entity_status | 48527.0ms
| NamedEntitySpawn | named_entity_spawn | 48530.0ms
| EntityMetadata | entity_metadata | 48533.0ms
| EntityUpdateAttributes | entity_update_attributes | 48535.0ms
| NamedEntitySpawn | named_entity_spawn | 48537.0ms
| EntityMetadata | entity_metadata | 48540.0ms
| EntityUpdateAttributes | entity_update_attributes | 48543.0ms
| NamedEntitySpawn | named_entity_spawn | 48545.0ms
| EntityMetadata | entity_metadata | 48548.0ms
| EntityUpdateAttributes | entity_update_attributes | 48551.0ms
| NamedEntitySpawn | named_entity_spawn | 48553.0ms
| EntityMetadata | entity_metadata | 48556.0ms
| EntityUpdateAttributes | entity_update_attributes | 48559.0ms
| NamedEntitySpawn | named_entity_spawn | 48561.0ms
| EntityMetadata | entity_metadata | 48564.0ms
| EntityUpdateAttributes | entity_update_attributes | 48567.0ms
| NamedEntitySpawn | named_entity_spawn | 48569.0ms
| EntityMetadata | entity_metadata | 48572.0ms
| EntityUpdateAttributes | entity_update_attributes | 48575.0ms
| EntityUpdateAttributes | entity_update_attributes | 48577.0ms
| WindowItems | window_items | 48581.0ms
| SetSlot | set_slot | 48583.0ms
| Transaction | transaction | 48585.0ms
| EntityUpdateAttributes | entity_update_attributes | 48587.0ms
| UpdateHealth | update_health | 48590.0ms
| HeldItemSlot | held_item_slot | 48592.0ms
| EntityStatus | entity_status | 48594.0ms
| GameStateChange | game_state_change | 48597.0ms
| Abilities | abilities | 48599.0ms
| Chat | chat | 48694.0ms
| PlayerInfo | player_info | 48696.0ms
| NamedEntitySpawn | named_entity_spawn | 48698.0ms
| EntityMetadata | entity_metadata | 48701.0ms
| EntityUpdateAttributes | entity_update_attributes | 48704.0ms
| Chat | chat | 48941.0ms
| PlayerInfo | player_info | 48944.0ms
| NamedEntitySpawn | named_entity_spawn | 48946.0ms
| EntityMetadata | entity_metadata | 48950.0ms
| EntityUpdateAttributes | entity_update_attributes | 48960.0ms
| Chat | chat | 49343.0ms
| PlayerInfo | player_info | 49346.0ms
| NamedEntitySpawn | named_entity_spawn | 49348.0ms
| EntityMetadata | entity_metadata | 49351.0ms
| EntityUpdateAttributes | entity_update_attributes | 49353.0ms
| Chat | chat | 49473.0ms
| PlayerInfo | player_info | 49475.0ms
| NamedEntitySpawn | named_entity_spawn | 49478.0ms
| EntityMetadata | entity_metadata | 49480.0ms
| EntityUpdateAttributes | entity_update_attributes | 49483.0ms
| Chat | chat | 49728.0ms
| PlayerInfo | player_info | 49731.0ms
| NamedEntitySpawn | named_entity_spawn | 49733.0ms
| EntityMetadata | entity_metadata | 49736.0ms
| EntityUpdateAttributes | entity_update_attributes | 49739.0ms
| Chat | chat | 49819.0ms
| Advancements | advancements | 49958.0ms
| UpdateHealth | update_health | 49961.0ms
| Experience | experience | 49963.0ms
| KeepAlive | keep_alive | 49965.0ms
| EntityTeleport | entity_teleport | 50190.0ms
| EntityTeleport | entity_teleport | 50193.0ms
| EntityTeleport | entity_teleport | 50195.0ms
| EntityTeleport | entity_teleport | 50197.0ms
| EntityTeleport | entity_teleport | 50199.0ms
| EntityTeleport | entity_teleport | 50201.0ms
| EntityTeleport | entity_teleport | 50206.0ms
| EntityTeleport | entity_teleport | 50208.0ms
| EntityTeleport | entity_teleport | 50210.0ms
| EntityTeleport | entity_teleport | 50213.0ms
| EntityTeleport | entity_teleport | 50215.0ms
| EntityTeleport | entity_teleport | 54722.0ms
| EntityStatus | entity_status | 54764.0ms
| EntityMetadata | entity_metadata | 54766.0ms
| EntityMetadata | entity_metadata | 55289.0ms
| EntityStatus | entity_status | 55292.0ms
| EntityMetadata | entity_metadata | 55312.0ms
| EntityMetadata | entity_metadata | 55794.0ms
| EntityStatus | entity_status | 55797.0ms
| EntityMetadata | entity_metadata | 55800.0ms
| EntityMetadata | entity_metadata | 55804.0ms
| EntityStatus | entity_status | 55807.0ms
| EntityMetadata | entity_metadata | 55810.0ms
| EntityMetadata | entity_metadata | 55813.0ms
| EntityStatus | entity_status | 55815.0ms
| EntityMetadata | entity_metadata | 55818.0ms
| EntityMetadata | entity_metadata | 55823.0ms
| EntityStatus | entity_status | 55826.0ms
| EntityMetadata | entity_metadata | 55829.0ms
| EntityDestroy | entity_destroy | 55831.0ms
| PlayerInfo | player_info | 55834.0ms
| Chat | chat | 55837.0ms
| EntityDestroy | entity_destroy | 55839.0ms
| PlayerInfo | player_info | 55841.0ms
| Chat | chat | 55843.0ms
| EntityDestroy | entity_destroy | 55845.0ms
| PlayerInfo | player_info | 55847.0ms
| Chat | chat | 55850.0ms
| EntityDestroy | entity_destroy | 55852.0ms
| PlayerInfo | player_info | 55853.0ms
| Chat | chat | 55855.0ms
| EntityDestroy | entity_destroy | 55857.0ms
| PlayerInfo | player_info | 55860.0ms
| Chat | chat | 55862.0ms
| EntityDestroy | entity_destroy | 55864.0ms
| PlayerInfo | player_info | 55866.0ms
| Chat | chat | 55868.0ms
| KickDisconnect | kick_disconnect | 55870.0ms
